first round of changes

--- a/debug_macro.cfg
+++ b/debug_macro.cfg
@@ -14,7 +14,7 @@ gcode:
              else params.P if params.P %}
   {% set out = [] %}
   {% for name1 in printer|sort %}
-    {% if config %} ; print the searched printer.configfile[path] parameter
+    {% if config %} # print the searched printer.configfile[path] parameter
       {% if name1 is in ['configfile'] %}
         {% for name2 in printer[name1][path]|sort %}
           {% if name2 is in [search] %}
@@ -26,10 +26,10 @@ gcode:
         {% endfor %}
       {% endif %}
     {% else %}
-      {% for name2, value in printer[name1].items()|sort %} ; search for anything expext printer.configfile
-        {% if search is not defined and name1 is not in ['configfile'] %} ; print all printer. parameter
+      {% for name2, value in printer[name1].items()|sort %} # search for anything expext printer.configfile
+        {% if search is not defined and name1 is not in ['configfile'] %} # print all printer. parameter
           {% set _dummy = out.append("printer['%s'].%s = %s" % (name1, name2, value)) %}
-        {% elif search is defined and name1 is in [search] %} ; print the searched printer. parameter
+        {% elif search is defined and name1 is in [search] %} # print the searched printer. parameter
           {% set _dummy = out.append("printer['%s'].%s = %s" % (name1, name2, value)) %}
         {% endif %}
       {% endfor %}
