--- a/fan.cfg
+++ b/fan.cfg
@@ -3,75 +3,59 @@
 #####################################################################
 ##  Hotend Fan - XYE board, E1 Connector
 [heater_fan hotend_fan]
-pin: P2.4
+pin: PA8
 max_power: 1.0
-fan_speed: 1
-kick_start_time: 0
+kick_start_time: 0.5
 heater: extruder
-heater_temp: 50.0
+heater_temp: 80
+fan_speed: 0.7
 
 ##  Print Cooling Fan (24V Fan 4 wire)
 ##  Z board, X Endstop (PWM)
 ##  Z board, E1det (Tacho)
 [fan]
-pin: z:P1.29
-cycle_time: 0.0001     #10 kHz PWM signal
-hardware_pwm: False
-kick_start_time: 0
-off_below: 0.05
-tachometer_pin: z:P1.25
-tachometer_ppr: 2
+pin: PE5
+kick_start_time: 0.3
+off_below: 0.10
 
 ##  Controller fan (5V Fan 4 wire)
 ##  Z board, NeoPixel Connector (PWM)
 ##  Z board, Y Endstop (Tacho)
-[heater_fan controller_fan]
-pin: z:P1.24
+[controller_fan my_controller_fan]
+pin: PD12
 max_power: 1.0
 shutdown_speed: 1.0
-cycle_time: 0.0001     #10 kHz PWM signal
-hardware_pwm: False
-kick_start_time: 0
-fan_speed: 0.9
+cycle_time: 0.01
+#hardware_pwm:
+kick_start_time: 0.8
+off_below: 0.3
+#tachometer_pin:
+#tachometer_ppr:
+#tachometer_poll_interval:
+#   See the "fan" section for a description of the above parameters.
+fan_speed: 0.7
+idle_timeout: 30
+idle_speed: 0
 heater: heater_bed
-heater_temp: 45.0
-tachometer_pin: z:P1.28
-tachometer_ppr: 2
 
 ##  Chamber temp / Exhaust fan (24V Fan 4 wire)
 ##  XYE board, NeoPixel Connector (PWM)
 ##  XYE board, TH1 Connector
 ##  XYE board, Z Endstop (Tacho)
-[temperature_fan chamber]
-pin: P1.24
-max_power: 1.0
-shutdown_speed: 0.0
-cycle_time: 0.0005     #2 kHz PWM signal
-hardware_pwm: False
-kick_start_time: 0
-sensor_type: ATC Semitec 104GT-2
-sensor_pin: P0.23
-min_temp: 0
-max_temp: 70
-target_temp: 0
-max_speed: 0.7
-min_speed: 0.1
-control: pid
-pid_Kp: 2.0     ;40
-pid_Ki: 5.0     ;0.2
-pid_Kd: 0.5     ;0.1
-pid_deriv_time: 2.0
-gcode_id: C
-tachometer_pin: P1.27
-tachometer_ppr: 2
-
-##  Nevermore Micro filter
-##  - Z board, E1 Connector
-[fan_generic filter]
-pin: z:P2.4
+[fan_generic chamber_fan]]
+pin: PB10
+shutdown_speed: 0
 max_power: 1.0
 kick_start_time: 0.5
 off_below: 0.10
+
+##  Nevermore Micro filter
+##  - Z board, E1 Connector
+# [fan_generic filter]
+# pin: z:P2.4
+# max_power: 1.0
+# kick_start_time: 0.5
+# off_below: 0.10
 
 [temperature_sensor RPi]
 sensor_type: temperature_host
@@ -81,11 +65,12 @@ gcode_id: PI
 
 ##  Z board, TH1 Connector
 [temperature_sensor endstop]
-sensor_type: Generic 3950
-sensor_pin: z:P0.23
-min_temp: 10
-max_temp: 100
-gcode_id: E
+#   D8 on mcu_z
+sensor_type: ATC Semitec 104GT-2
+sensor_pin: PF5
+min_temp: 0
+max_temp: 80
+gcode_id: Z
 
 ## dummy output to get an switch in Mainsail
 ## any unused mcu pin can be defined you will not connect anything
@@ -175,98 +160,98 @@ gcode:
   {% set state='on' if printer['fan_generic filter'].speed|float > 0.0 else 'off' %}
   {action_respond_info("Filter Fan %s" % (state))}
   
-#####################################################################
-#  Display Menu definition                                          #
-#####################################################################
-##  Disable stock config
-[menu __main __control __fanonoff]
-type: disabled
+# #####################################################################
+# #  Display Menu definition                                          #
+# #####################################################################
+# ##  Disable stock config
+# [menu __main __control __fanonoff]
+# type: disabled
 
-[menu __main __control __fanspeed]
-type: disabled
+# [menu __main __control __fanspeed]
+# type: disabled
 
-## Add menu for fan, chamber and filter
-[menu __main __control __fan]
-type: list
-name: Fan 
-index: 5
+# ## Add menu for fan, chamber and filter
+# [menu __main __control __fan]
+# type: list
+# name: Fan 
+# index: 5
 
-[menu __main __control __fan __partcooling]
-type: list
-enable: {'fan' in printer}
-name: Fan {'%3d' % (printer.fan.speed*100)}%
+# [menu __main __control __fan __partcooling]
+# type: list
+# enable: {'fan' in printer}
+# name: Fan {'%3d' % (printer.fan.speed*100)}%
 
-[menu __main __control __fan __chamber]
-type: list
-enable: {'temperature_fan chamber' in printer}
-name: Chamber {'%2dC' % (printer['temperature_fan chamber'].target) if printer['temperature_fan chamber'].target else 'OFF'}
+# [menu __main __control __fan __chamber]
+# type: list
+# enable: {'temperature_fan chamber' in printer}
+# name: Chamber {'%2dC' % (printer['temperature_fan chamber'].target) if printer['temperature_fan chamber'].target else 'OFF'}
 
-[menu __main __control __fan __filter]
-type: list
-enable: {'fan_generic filter' in printer}
-name: Filter {'%3d' % (printer['fan_generic filter'].speed*100)}%
+# [menu __main __control __fan __filter]
+# type: list
+# enable: {'fan_generic filter' in printer}
+# name: Filter {'%3d' % (printer['fan_generic filter'].speed*100)}%
 
-[menu __main __control __fan __partcooling __fanonoff]
-type: input
-name: Toggle: {'ON' if menu.input else 'OFF'}
-input: {printer.fan.speed}
-input_min: 0
-input_max: 1
-input_step: 1
-gcode:
-  M106 S{255 if menu.input else 0}
+# [menu __main __control __fan __partcooling __fanonoff]
+# type: input
+# name: Toggle: {'ON' if menu.input else 'OFF'}
+# input: {printer.fan.speed}
+# input_min: 0
+# input_max: 1
+# input_step: 1
+# gcode:
+#   M106 S{255 if menu.input else 0}
 
-[menu __main __control __fan __partcooling __fanspeed]
-type: input
-name: Speed: {'%3d' % (menu.input*100)}%
-input: {printer.fan.speed}
-input_min: 0
-input_max: 1
-input_step: 0.01
-gcode:
-  M106 S{'%d' % (menu.input*255)}
+# [menu __main __control __fan __partcooling __fanspeed]
+# type: input
+# name: Speed: {'%3d' % (menu.input*100)}%
+# input: {printer.fan.speed}
+# input_min: 0
+# input_max: 1
+# input_step: 0.01
+# gcode:
+#   M106 S{'%d' % (menu.input*255)}
 
-[menu __main __control __fan __chamber __chamberonoff]
-type: input
-name: Toggle: {'ON' if menu.input else 'OFF'}
-input: {printer['temperature_fan chamber'].target}
-input_min: 0
-input_max: 1
-input_step: 1
-gcode:
-  {% set temp_on = printer["gcode_macro _USER_VARIABLE"].vent_on|int %}
-  M141 S{temp_on if menu.input else 0}    
+# [menu __main __control __fan __chamber __chamberonoff]
+# type: input
+# name: Toggle: {'ON' if menu.input else 'OFF'}
+# input: {printer['temperature_fan chamber'].target}
+# input_min: 0
+# input_max: 1
+# input_step: 1
+# gcode:
+#   {% set temp_on = printer["gcode_macro _USER_VARIABLE"].vent_on|int %}
+#   M141 S{temp_on if menu.input else 0}    
     
-[menu __main __control __fan __chamber __chamberfanspeed]
-type: input
-name: Temp: {'%2dC' % (menu.input) if menu.input else 'OFF'}
-input: {printer['temperature_fan chamber'].target}
-input_min: {printer.configfile.settings['temperature_fan chamber'].min_temp|int}
-input_max: {printer.configfile.settings['temperature_fan chamber'].max_temp|int}
-input_step: 1
-gcode:
-    M141 S{'%d' % (menu.input)}
+# [menu __main __control __fan __chamber __chamberfanspeed]
+# type: input
+# name: Temp: {'%2dC' % (menu.input) if menu.input else 'OFF'}
+# input: {printer['temperature_fan chamber'].target}
+# input_min: {printer.configfile.settings['temperature_fan chamber'].min_temp|int}
+# input_max: {printer.configfile.settings['temperature_fan chamber'].max_temp|int}
+# input_step: 1
+# gcode:
+#     M141 S{'%d' % (menu.input)}
 
-[menu __main __control __fan __filter __filteronoff]
-type: input
-name: Toggle: {'ON ' if menu.input else 'OFF'}
-input: {printer['fan_generic filter'].speed}
-input_min: 0
-input_max: 1
-input_step: 1
-gcode:
- {% if menu.input %}
-   _FILTER_ON
- {% else %}
-   _SET_FILTER S=0.0
- {% endif %}
+# [menu __main __control __fan __filter __filteronoff]
+# type: input
+# name: Toggle: {'ON ' if menu.input else 'OFF'}
+# input: {printer['fan_generic filter'].speed}
+# input_min: 0
+# input_max: 1
+# input_step: 1
+# gcode:
+#  {% if menu.input %}
+#    _FILTER_ON
+#  {% else %}
+#    _SET_FILTER S=0.0
+#  {% endif %}
 
-[menu __main __control __fan __filter __filterspeed]
-type: input
-name: Speed: {'%3d' % (menu.input*100)}%
-input: {printer['fan_generic filter'].speed}
-input_min: 0
-input_max: 1
-input_step: 0.01
-gcode:
-    _SET_FILTER S={menu.input}
+# [menu __main __control __fan __filter __filterspeed]
+# type: input
+# name: Speed: {'%3d' % (menu.input*100)}%
+# input: {printer['fan_generic filter'].speed}
+# input_min: 0
+# input_max: 1
+# input_step: 0.01
+# gcode:
+#     _SET_FILTER S={menu.input}
