--- a/heater.cfg
+++ b/heater.cfg
@@ -1,90 +1,61 @@
 #####################################################################
 #  Extruder
 #####################################################################
-##  XYE board, E0 Connector
-##  XYE board, TH0 Connector
 [extruder]
-##################### Standard Values #####################
-##  BMG spec of extruder pully
-##  rotation_distence: 22.68 BMG 5mm axis
-##  rotation_distence: 33.00 BMG 8 mm axis
-##  gear ratios of different Extruders
-##  gear_ratio: 50:10  Voron V0.1 DD
-##  gear_ratio: 50:17  Voron Afterburner Clockworks
-##  gear_ratio: 80:20  Voron M4
-##  gear_ratio: 7.5:1  Voron Afterburner Galileo
-############### Different Clockworks Setups ###############
-##  Afterburner: Stepper Motor 0.9 step distance 0.00120 calibrated 0.001196
-##  dir_pin: P0.11
-##  full_steps_per_rotation: 400
-##  microsteps: 16
-##  rotation_distance: 7.6544
-############################################################
-##  Galileo: Stepper Motor 1.8 step distance 0.00138 calibrated 0,001375
-##  dir_pin: !P0.11
-##  full_steps_per_rotation: 200
-##  microsteps: 16
-##  rotation_distance: 4.401
-############### Different Clockworks Setups ###############
-##	Update value below when you perform extruder calibration
-##	Higher value means less filament extruded
-##	If you ask for 100mm of filament, but in reality it is 98mm:
-##	step_distance = 98 / 100 * step_distance_old
-############################################################
-step_pin: P2.13
-dir_pin: !P0.11
-enable_pin: !P2.12
-full_steps_per_rotation: 200
+enable_pin: !PG5
+step_pin: PF11
+dir_pin: !PG3
+rotation_distance: 13.321  ##	rotation_distance = <previous_rotation_distance> * <actual_extrude_distance> / 100
+gear_ratio: 50:17
+# rotation_distance: 35.42  ##	rotation_distance = <previous_rotation_distance> * <actual_extrude_distance> / 100
+# gear_ratio: 75:10
 microsteps: 16
-rotation_distance: 4.401
+full_steps_per_rotation: 200
 nozzle_diameter: 0.4
 filament_diameter: 1.75
-heater_pin: P2.7
-sensor_type: SliceEngineering 450
-sensor_pin: P0.24
+max_extrude_only_distance: 1000
+heater_pin: PA3
+#sensor_type: PT1000 #Dragon
+#sensor_type: NTC 100K beta 3950
+sensor_type: ATC Semitec 104NT-4-R025H42G  #FOR V7 & Rapido
+sensor_pin: PF4
+pullup_resistor: 4700
 min_temp: 10
-max_temp: 300
+max_temp: 280
 max_power: 1.0
-#   The minimum temperature (in Celsius) at which extruder move
-#   commands may be issued. The default is 170 Celsius.
-min_extrude_temp: 210
-##  Maximum length (in mm of raw filament) that a retraction or
-##  extrude-only move may have. If a retraction or extrude-only move
-##  requests a distance greater than this value it will cause an error
-##  to be returned. The default is 50mm.
-max_extrude_only_distance: 100.0
-#control = pid
-#pid_kp = 26.213
-#pid_ki = 1.304
-#pid_kd = 131.721
-##  Try to keep pressure_advance below 1.0
-pressure_advance: 0.05
-##  Default is 0.040, leave stock
+min_extrude_temp: 15
+smooth_time: 1.0
+pressure_advance: 0.051
 pressure_advance_smooth_time: 0.040
+# control = pid
+# pid_kp = 26.692
+# pid_ki = 2.780
+# pid_kd = 64.060
+#control = pid
+#pid_kp = 26.692
+#pid_ki = 2.780
+#pid_kd = 64.060
 
 #####################################################################
 #  Bed Heater
 #####################################################################
-##  SSR - Z board, Fan0 Connector
-##  Z board, TB Connector
-[heater_bed]
-heater_pin: z:P2.3
-sensor_type: Generic 3950
-sensor_pin: z:P0.25
-max_power: 0.65
-min_temp: 10
-max_temp: 130
-#control: pid
-#pid_kp: 58.437
-#pid_ki: 2.347
-#pid_kd: 363.769
+[thermistor bed_custom]
+temperature1: 59
+resistance1: 23608.82
+temperature2: 77
+resistance2: 11725.41
+temperature3: 108
+resistance3: 4131.20
 
-##  Sensor srewed in the bed
-##  Z board, TH0 Thermistor
-##  This only works as safety guard
-[temperature_sensor bed]
-sensor_type: Generic 3950
-sensor_pin: z:P0.24
-min_temp: 10
+[heater_bed]
+##	SSR Pin - Z board, Fan Pin
+heater_pin: PA2
+sensor_type: bed_custom #NTC 100K MGB18-104F39050L32
+sensor_pin: PF3
+max_power: 0.65
+min_temp: 0
 max_temp: 120
-gcode_id: B1
+#control = pid
+#pid_kp = 44.568
+#pid_ki = 1.184
+#pid_kd = 419.507
