--- a/input_shaper.cfg
+++ b/input_shaper.cfg
@@ -98,24 +98,24 @@ shaper_type_y: mzv
 description: Run input shaper test
 gcode:
   {% set user = printer['gcode_macro _USER_VARIABLE'] %}
-  _CG28                                                 ; home if needed
-  TURN_OFF_HEATERS                                      ; turn off heaters
-  M107                                                  ; turn off fan
-  {% if user.hw.chamber.fan %} M141 {% endif %}         ; exhaust fan off
-  {% if user.hw.filter.ena %} _SET_FILTER {% endif %}   ; filter off
+  _CG28                                                 # home if needed
+  TURN_OFF_HEATERS                                      # turn off heaters
+  M107                                                  # turn off fan
+  {% if user.hw.chamber.fan %} M141 {% endif %}         # exhaust fan off
+  {% if user.hw.filter.ena %} _SET_FILTER {% endif %}   # filter off
   _PRINT_AR T="INPUT SHAPER: Noise values, check if sensor is installed"
-  MEASURE_AXES_NOISE                                    ; get noise value in log
+  MEASURE_AXES_NOISE                                    # get noise value in log
   _PRINT_AR T="INPUT SHAPER: Resonance Tests starting ..."
-  TEST_RESONANCES AXIS=X                                ; measure X 
-  TEST_RESONANCES AXIS=Y                                ; measure Y
+  TEST_RESONANCES AXIS=X                                # measure X 
+  TEST_RESONANCES AXIS=Y                                # measure Y
   _PRINT_AR T="INPUT SHAPER: Resonance Tests done"
   _PRINT_AR T="INPUT SHAPER: Generate graph in backround"
   RUN_SHELL_COMMAND CMD=plot_graph
 
-# Shell Comand is not supported by a default klipper installation 
-[gcode_shell_command plot_graph]
-command: sh /home/pi/klipper_config/script/plot_graph.sh
-timeout: 30.0
-verbose: True
+# # Shell Comand is not supported by a default klipper installation 
+# [gcode_shell_command plot_graph]
+# command: sh /home/pi/klipper_config/script/plot_graph.sh
+# timeout: 30.0
+# verbose: True
   
   
