--- a/macro.cfg
+++ b/macro.cfg
@@ -33,7 +33,7 @@ variable_state: 'Prepare'
 gcode:
   {% set user   = printer['gcode_macro _USER_VARIABLE'] %}
   {% set actBed = printer['temperature_sensor bed'].temperature|float|round(1) if 'temperature_sensor bed' in printer 
-             else printer.heater_bed.temperature|float|round(1) %} ; get actual temp from extra sensor or heater sensor
+             else printer.heater_bed.temperature|float|round(1) %} # get actual temp from extra sensor or heater sensor
   ##############################  Prepare phase only done at the first exection of PRINT_START  ##############################
   {% if state == 'Prepare' %}
     #############  Store input parameters  #############
@@ -53,14 +53,14 @@ gcode:
                'z_adjust'    : params.Z_ADJUST|default(0.0)|float,
                'filter'      : False if params.FILTER|default(1)|int == 0 else True} %}
     {% if user.hw.relay,ena %} _HEATER_ON {% endif %}
-    {% if user.hw.caselight.ena %} _CASELIGHT_ON {% endif %}             ; switch on light
+    {% if user.hw.caselight.ena %} _CASELIGHT_ON {% endif %}             # switch on light
     {% if user.hw.display.ena %} _LCD_KNOB COLOR=RED BLINK=1 {% endif %}
-    {% if user.hw.chamber.fan %} M141 S0  {% endif %}                    ; exhaust fan off
-    {% if user.hw.filter.ena and var.filter %} _FILTER_ON {% endif %}    ; activate filter
-    _CG28                                                                ; home if needed
-    G90                                                                  ; absolute position
-    G0 Z{user.park.bed.z} F{user.speed.z_hop}                            ; move nozzle to z high first
-    G0 X{user.park.bed.x} Y{user.park.bed.y} F{user.speed.travel}        ; home to get toolhead in the middle
+    {% if user.hw.chamber.fan %} M141 S0  {% endif %}                    # exhaust fan off
+    {% if user.hw.filter.ena and var.filter %} _FILTER_ON {% endif %}    # activate filter
+    _CG28                                                                # home if needed
+    G90                                                                  # absolute position
+    G0 Z{user.park.bed.z} F{user.speed.z_hop}                            # move nozzle to z high first
+    G0 X{user.park.bed.x} Y{user.park.bed.y} F{user.speed.travel}        # home to get toolhead in the middle
     PAUSE_BASE
     SET_GCODE_VARIABLE MACRO=PRINT_START VARIABLE=var VALUE="{var}"
     SET_GCODE_VARIABLE MACRO=CANCEL_PRINT VARIABLE=execute VALUE=False
@@ -72,24 +72,24 @@ gcode:
     {% set cfg_bed_max = printer.configfile.settings.heater_bed.max_temp|float|round(1) - 5.0 %}
     {% set targetBed = var.temp.bed - var.delta.bed %}
     {% set soakBed = [(var.temp.bed + user.print_start.bed_up), cfg_bed_max]|min %}
-    {% if (var.time.soak <= 0) or (actBed >= targetBed) %}  ; check if soak time is 0 or if the bed is still hot
+    {% if (var.time.soak <= 0) or (actBed >= targetBed) %}  # check if soak time is 0 or if the bed is still hot
       M117 Heating Extruder
       {% set text = 'heat soak disabled' if var.time.soak <= 0 else 'heat soak not needed' %}
-      _PRINT_AR T="{"Bed temp: act %3.1f°C min %3.1f°C (target(%3.1f°C) - delta(%2.1f°C)) %s" % 
+      _PRINT_AR T="{"Bed temp: act %3.1fC min %3.1fC (target(%3.1fC) - delta(%2.1fC)) %s" % 
                     (actBed,targetBed,var.temp.bed,var.delta.bed,text)}"
       {% set _dummy = var.update({'redo_qgl' : False}) %}
-      M140 S{var.temp.bed}      ; heat bed
-      M109 S{var.temp.extruder} ; heat extruder and wait
-      M190 S{var.temp.bed}      ; heat bed and wait
+      M140 S{var.temp.bed}      # heat bed
+      M109 S{var.temp.extruder} # heat extruder and wait
+      M190 S{var.temp.bed}      # heat bed and wait
       SET_GCODE_VARIABLE MACRO=PRINT_START VARIABLE=state VALUE='"Chamber"'
       UPDATE_DELAYED_GCODE ID=_START_PRINT_WAIT DURATION=0.5
     {% else %}
       M117 Heating Bed
-      _PRINT_AR T="{"Bed temp: act %3.1f°C min %3.1f°C (target(%3.1f°C) - delta(%2.1f°C)) heat soak needed" % 
+      _PRINT_AR T="{"Bed temp: act %3.1fC min %3.1fC (target(%3.1fC) - delta(%2.1fC)) heat soak needed" % 
                    (actBed,targetBed,var.temp.bed,var.delta.bed)}"
-      _PRINT_AR T="{"Set Bed temp to %3.1f°C instead of %3.1f°C for faster heat soak" % (soakBed,var.temp.bed)}"    
-      M106 S90              ; switch part cooling ~35% to move air in chamber
-      M140 S{soakBed}       ; heat bed
+      _PRINT_AR T="{"Set Bed temp to %3.1fC instead of %3.1fC for faster heat soak" % (soakBed,var.temp.bed)}"    
+      M106 S90              # switch part cooling ~35% to move air in chamber
+      M140 S{soakBed}       # heat bed
       SET_GCODE_VARIABLE MACRO=PRINT_START VARIABLE=state VALUE='"HeatSoak"'
       {% set next_duration = user.print_start.ival if var.time.soak > user.print_start.ival else var.time.soak %}
       {% set _dummy = var.time.update({'soak': var.time.soak - user.print_start.ival}) if var.time.soak > user.print_start.ival 
@@ -116,13 +116,13 @@ gcode:
     {% endif %}
     {% if filament_detected %}
       {% if var.time.soak <= (user.print_start.time.extruder + var.temp.extruder - 240) and 
-             var.temp.extruder != printer.extruder.target %} ; check time to start heating extruder
-        M104 S{var.temp.extruder} ; heat extruder
+             var.temp.extruder != printer.extruder.target %} # check time to start heating extruder
+        M104 S{var.temp.extruder} # heat extruder
       {% endif %}
-      {% if var.time.soak <= user.print_start.time.bed and bed != printer.heater_bed.target|int %}  ; check time to reduce bed temp
-        M140 S{var.temp.bed} ; heat bed
+      {% if var.time.soak <= user.print_start.time.bed and bed != printer.heater_bed.target|int %}  # check time to reduce bed temp
+        M140 S{var.temp.bed} # heat bed
       {% endif %}
-      {% if var.time.soak > 0 %} ; check remaining time
+      {% if var.time.soak > 0 %} # check remaining time
         {% set next_duration = var.time.soak if user.print_start.ival >= var.time.soak else user.print_start.ival %}
         {% set _dummy = var.time.update({'soak': 0}) if user.print_start.ival >= var.time.soak 
                    else var.time.update({'soak': var.time.soak - user.print_start.ival}) %}}
@@ -143,13 +143,13 @@ gcode:
     {% set actChamber = printer["temperature_" + user.hw.chamber.type + " chamber"].temperature|round(1) if user.hw.chamber.ena
                    else 0 %}
     {% if var.time.soak_extra > 0 and actChamber < targetChamber %}
-      _PRINT_AR T="{"Chamber temp: act %2.1f°C min %2.1f°C (target(%2.1f°C) - delta(%2.1f°C)) extra heat soak needed" %
+      _PRINT_AR T="{"Chamber temp: act %2.1fC min %2.1fC (target(%2.1fC) - delta(%2.1fC)) extra heat soak needed" %
                     (actChamber,targetChamber,var.temp.chamber,var.delta.chamber)}"
       SET_GCODE_VARIABLE MACRO=PRINT_START VARIABLE=state VALUE='"ChamberSoak"'
       UPDATE_DELAYED_GCODE ID=_START_PRINT_WAIT DURATION=0.5
     {% else %}
       {% set text = 'extra heat soak disabled' if var.time.soak_extra <= 0 else 'extra heat soak not needed' %}
-      _PRINT_AR T="{"Chamber temp: act %2.1f°C min %2.1f°C (target(%2.1f°C) - delta(%2.1f°C)) %s" % 
+      _PRINT_AR T="{"Chamber temp: act %2.1fC min %2.1fC (target(%2.1fC) - delta(%2.1fC)) %s" % 
                     (actChamber,targetChamber,var.temp.chamber,var.delta.chamber,text)}"
       SET_GCODE_VARIABLE MACRO=PRINT_START VARIABLE=state VALUE='"Final"'
       UPDATE_DELAYED_GCODE ID=_START_PRINT_WAIT DURATION=0.5  
@@ -159,14 +159,14 @@ gcode:
     {% set targetChamber = var.temp.chamber - var.delta.chamber %}
     {% set actChamber = printer["temperature_" + user.hw.chamber.type + " chamber"].temperature|round(1) if user.hw.chamber.ena
                    else 0 %}
-    {% if var.time.soak_extra > 0 and actChamber < targetChamber %} ; check remaining time and temp difference
+    {% if var.time.soak_extra > 0 and actChamber < targetChamber %} # check remaining time and temp difference
       {% set next_duration = var.time.soak_extra if user.print_start.ival >= var.time.soak_extra else user.print_start.ival %}
       {% set _dummy = var.time.update({'soak_extra': 0}) if user.print_start.ival >= var.time.soak_extra
                  else var.time.update({'soak_extra': var.time.soak_extra - user.print_start.ival}) %}}
       UPDATE_DELAYED_GCODE ID=_START_PRINT_WAIT DURATION={next_duration}
     {% else %}
       {% set text = 'extra heat soak timed out' if var.time.soak_extra == 0 else 'chamber temp reached' %}
-      _PRINT_AR T="{"Chamber temp: act %2.1f°C min %2.1f°C (target(%2.1f°C) - delta(%2.1f°C)) %s" % 
+      _PRINT_AR T="{"Chamber temp: act %2.1fC min %2.1fC (target(%2.1fC) - delta(%2.1fC)) %s" % 
                     (actChamber,targetChamber,var.temp.chamber,var.delta.chamber,text)}"
       SET_GCODE_VARIABLE MACRO=PRINT_START VARIABLE=state VALUE='"Final"'
       UPDATE_DELAYED_GCODE ID=_START_PRINT_WAIT DURATION=0.5
@@ -175,11 +175,11 @@ gcode:
   ##############################  all whats need to run at the end  ##############################
   {% elif state == 'Final' %}
     RESUME_BASE
-    SET_GCODE_VARIABLE MACRO=PRINT_START VARIABLE=state VALUE='"Prepare"' ; set state for next print    
+    SET_GCODE_VARIABLE MACRO=PRINT_START VARIABLE=state VALUE='"Prepare"' # set state for next print    
     {% if user.hw.display.ena %} _LCD_KNOB COLOR=RED  {% endif %}
-    M106 S0                                                               ; turn off part cooling fan
-    G34                                                                   ; home & QGL
-    {% if user.hw.chamber.fan %} M141 S{var.temp.chamber} {% endif %}     ; set target temp for exhaust fan
+    M106 S0                                                               # turn off part cooling fan
+    G34                                                                   # home & QGL
+    {% if user.hw.chamber.fan %} M141 S{var.temp.chamber} {% endif %}     # set target temp for exhaust fan
     NOZZLECLEAN
     SET_GCODE_VARIABLE MACRO=_HOME_Z VARIABLE=calibrate_z_next VALUE={user.hw.auto_z_offset.auto}
     G28 Z
@@ -192,15 +192,15 @@ gcode:
       {% set _dummy = var.temp.update({'endstop': printer['temperature_sensor endstop'].temperature}) %}
       SET_GCODE_VARIABLE MACRO=PRINT_START VARIABLE=var VALUE="{var}"
     {% endif %}
-    G21                                                 ; set units to millimeters
-    G90                                                 ; use absolute coordinates
-    M83                                                 ; use relative distances for extrusion
+    G21                                                 # set units to millimeters
+    G90                                                 # use absolute coordinates
+    M83                                                 # use relative distances for extrusion
     UPDATE_DELAYED_GCODE ID=_CLEAR_DISPLAY DURATION=1
   {% endif %}    
  
 [delayed_gcode _START_PRINT_WAIT]
 gcode:
-  {% macro print_time(text, time) %} ; print remaining time
+  {% macro print_time(text, time) %} # print remaining time
     M117 {'%s' % text} {(time|int // 60)}:{'%02d' % (time|int % 60)}
   {% endmacro %}
   {% if printer['gcode_macro PRINT_START'].state == 'HeatSoak'%}
@@ -210,8 +210,8 @@ gcode:
   {% endif %}
   # Check CANCLE_PRINT was executed
   {% if printer['gcode_macro CANCEL_PRINT'].execute|lower == 'false' %}
-    PRINT_START  ; Junp back to PRINT_START
-  {% else %} ; break loop and insure state is correct for the next print start
+    PRINT_START  # Junp back to PRINT_START
+  {% else %} # break loop and insure state is correct for the next print start
     SET_GCODE_VARIABLE MACRO=CANCEL_PRINT VARIABLE=execute VALUE=False
     SET_GCODE_VARIABLE MACRO=PRINT_START VARIABLE=state VALUE='"Prepare"'
     UPDATE_DELAYED_GCODE ID=_CLEAR_DISPLAY DURATION=1
@@ -230,18 +230,18 @@ gcode:
   {% set safe = {'x': 20.0 if act.x|float < (max.x|float - 20.0) else -20.0,
                  'y': 20.0 if act.y|float < (max.y|float - 20.0) else -20.0,
                  'z':  2.0 if act.z|float < (max.z|float -  2.0) else (max.z|float - act.z|float)} %}
-  M400                                                              ; wait for buffer to clear
+  M400                                                              # wait for buffer to clear
   SAVE_GCODE_STATE NAME=STATE_PRINT_END
-  G92 E0                                                            ; zero the extruder
-  M83                                                               ; relative extrusion
-  G1 E-{user.filament.retract.end} F{user.speed.retract}            ; retract filament
-  G91                                                               ; relative positioning
-  G0 X{safe.x} Y{safe.y} Z{safe.z} F{user.speed.travel}             ; move nozzle to remove stringing
-  TURN_OFF_HEATERS                                                  ; turn off heaters
-  M107                                                              ; turn off fan
-  {% if user.hw.chamber.fan %} M141 S{vent_on} {% endif %}          ; vent chamber (setting fan to below ambient)
-  G90                                                               ; absolute positioning
-  G0 X{user.park.pause.x} Y{user.park.pause.y} F{user.speed.travel} ; park nozzle at brush bin
+  G92 E0                                                            # zero the extruder
+  M83                                                               # relative extrusion
+  G1 E-{user.filament.retract.end} F{user.speed.retract}            # retract filament
+  G91                                                               # relative positioning
+  G0 X{safe.x} Y{safe.y} Z{safe.z} F{user.speed.travel}             # move nozzle to remove stringing
+  TURN_OFF_HEATERS                                                  # turn off heaters
+  M107                                                              # turn off fan
+  {% if user.hw.chamber.fan %} M141 S{vent_on} {% endif %}          # vent chamber (setting fan to below ambient)
+  G90                                                               # absolute positioning
+  G0 X{user.park.pause.x} Y{user.park.pause.y} F{user.speed.travel} # park nozzle at brush bin
   _ADD_PRINT_TIME
   _SD_PRINT_STATS R='done'
   _SD_PRINTER_STATS
@@ -251,8 +251,8 @@ gcode:
   {% if user.hw.filter.ena %} UPDATE_DELAYED_GCODE ID=_DELAY_FILTER_OFF DURATION={filter_off} {% endif %}
   {% if user.hw.endstop_temp.ena %} 
     {action_respond_info("PRINT_END
-                          BED temp: act %3.1f°C
-                          Endstop temp: start %3.1f°C end %3.1f°C" % (printer['temperature_sensor bed'].temperature if 'temperature_sensor bed' in printer 
+                          BED temp: act %3.1fC
+                          Endstop temp: start %3.1fC end %3.1fC" % (printer['temperature_sensor bed'].temperature if 'temperature_sensor bed' in printer 
                                                                  else printer.heater_bed.temperature, 
                                                                       printer['gcode_macro PRINT_START'].var.temp.endstop,
                                                                       printer['temperature_sensor endstop'].temperature))}
@@ -260,8 +260,8 @@ gcode:
   {% if user.unload_sd|lower == 'true' %} UPDATE_DELAYED_GCODE ID=_DELAY_SDCARD_RESET_FILE DURATION=10 {% endif %}
   UPDATE_DELAYED_GCODE ID=_CLEAR_DISPLAY DURATION=10
   RESTORE_GCODE_STATE NAME=STATE_PRINT_END
-  M220 S100 ; set feedrate percentage back to default
-  M221 S100 ; set speed percentage back to default
+  M220 S100 # set feedrate percentage back to default
+  M221 S100 # set speed percentage back to default
 
 [gcode_macro G34]
 description: Reset bed mesh, offset and execute QGL
