--- a/magprobe.cfg
+++ b/magprobe.cfg
@@ -40,7 +40,7 @@ variable_state: 'unknown'
 variable_dock_state: 'unknown'
 variable_id: 0
 gcode:
-  {% set id = 1 if id == 0 else id + 1 %} ; generate an id not equal to 0
+  {% set id = 1 if id == 0 else id + 1 %} # generate an id not equal to 0
   QUERY_PROBE ID={id}
   _PROBE_ACTION ACTION={params.ACTION} ID={id} {"RESPOND=" + params.RESPOND if params.RESPOND is defined else ""}
   SET_GCODE_VARIABLE MACRO=_MAG_PROBE VARIABLE=id VALUE={id}
@@ -114,25 +114,25 @@ gcode:
 description: Helper: Attach MagProbe
 gcode:
   {% set user = printer['gcode_macro _USER_VARIABLE'] %}
-  {% set move_z = [user.z_hop, printer.toolhead.position.z]|max %}     ; calc movement high
-  G90                                                                  ; absolute positioning
-  G0 Z{move_z} F{user.speed.z_hop}                                     ; move head up
-  G0 X{user.probe.store.x} Y{user.probe.store.y} F{user.speed.travel}  ; step 1
-  G0 X{user.probe.dock.x} F{user.speed.dock}                           ; step 2
-  G0 Y{user.probe.dock.y} F{user.speed.dock}                           ; step 3
-  {% if not printer.gcode_move.absolute_coordinates %} G91 {% endif %} ; set back to relative
+  {% set move_z = [user.z_hop, printer.toolhead.position.z]|max %}     # calc movement high
+  G90                                                                  # absolute positioning
+  G0 Z{move_z} F{user.speed.z_hop}                                     # move head up
+  G0 X{user.probe.store.x} Y{user.probe.store.y} F{user.speed.travel}  # step 1
+  G0 X{user.probe.dock.x} F{user.speed.dock}                           # step 2
+  G0 Y{user.probe.dock.y} F{user.speed.dock}                           # step 3
+  {% if not printer.gcode_move.absolute_coordinates %} G91 {% endif %} # set back to relative
 
 [gcode_macro _DOCK_PROBE]
 description: Helper: Dock MagProbe
 gcode:
   {% set user = printer['gcode_macro _USER_VARIABLE'] %}
-  {% set move_z = [user.z_hop, printer.toolhead.position.z]|max %}     ; calc movement high
-  G90                                                                  ; absolute positioning
-  G0 Z{move_z} F{user.speed.z_hop}                                     ; move head up
-  G0 X{user.probe.dock.x} Y{user.probe.dock.y} F{user.speed.travel}    ; step 1
-  G0 Y{user.probe.store.y} F{user.speed.dock}                          ; step 2
-  G0 X{user.probe.store.x} F{user.speed.dock}                          ; step 3
-  {% if not printer.gcode_move.absolute_coordinates %} G91 {% endif %} ; set back to relative
+  {% set move_z = [user.z_hop, printer.toolhead.position.z]|max %}     # calc movement high
+  G90                                                                  # absolute positioning
+  G0 Z{move_z} F{user.speed.z_hop}                                     # move head up
+  G0 X{user.probe.dock.x} Y{user.probe.dock.y} F{user.speed.travel}    # step 1
+  G0 Y{user.probe.store.y} F{user.speed.dock}                          # step 2
+  G0 X{user.probe.store.x} F{user.speed.dock}                          # step 3
+  {% if not printer.gcode_move.absolute_coordinates %} G91 {% endif %} # set back to relative
 
 #####################################################################
 #   Customized standard macros
@@ -162,7 +162,7 @@ gcode:
     G0.1 {rawparams}
   {% else %}
     {% set param = [] %} 
-    {% for key in params %} ; get gcode input parameters
+    {% for key in params %} # get gcode input parameters
       {% set _dummy = param.append(key + "=" + params[key]) if key is not in ['G', 'FORCE'] %}
     {% endfor %}
     _Z_MOVE_CHECK CALLER=G0 {param|join(" ")}
@@ -176,7 +176,7 @@ gcode:
     G1.1 {rawparams}
   {% else %}
     {% set param = [] %} 
-    {% for key in params %} ; get gcode input parameters
+    {% for key in params %} # get gcode input parameters
       {% set _dummy = param.append(key + "=" + params[key]) if key is not in ['G', 'FORCE'] %}
     {% endfor %}
     _Z_MOVE_CHECK CALLER=G1 {param|join(" ")}
@@ -186,7 +186,7 @@ gcode:
 description: Helper: Check limit and perform move
 gcode:
   {% set param = [] %} 
-  {% for key in params %} ; generate base macro call
+  {% for key in params %} # generate base macro call
     {% if key == 'Z' %}
       {% set z_target = params.Z|float if printer.gcode_move.absolute_coordinates
                    else params.Z|float + printer.gcode_move.gcode_position.z %}
@@ -203,7 +203,7 @@ gcode:
       {% set _dummy = param.append(key + params[key]) %}
     {% endif %}
   {% endfor %}
-  {params.CALLER}.1 {param|join(" ")} ; call G0 or G1 base macro with all parameters
+  {params.CALLER}.1 {param|join(" ")} # call G0 or G1 base macro with all parameters
 
 [gcode_macro QUERY_PROBE]
 description: Return the status of the z-probe and store ID
@@ -211,7 +211,7 @@ rename_existing: QUERY_PROBE_BASE
 variable_id: 0
 gcode:
   QUERY_PROBE_BASE
-  SET_GCODE_VARIABLE MACRO=QUERY_PROBE VARIABLE=id VALUE={params.ID|default(0)} ; call id 0 means invalid
+  SET_GCODE_VARIABLE MACRO=QUERY_PROBE VARIABLE=id VALUE={params.ID|default(0)} # call id 0 means invalid
 
 [gcode_macro PROBE_ACCURACY]
 description: Probe Z-height accuracy at current XY position and dock/undock MagProbe
@@ -221,9 +221,9 @@ gcode:
   # as we need to return to the position with the probe we need to be at least at z_hop
   {% if user.hw.mag_probe.ena and printer.gcode_move.gcode_position.z < user.z_hop %}
     {action_respond_info("PROBE_ACCURACY: High must be above %.2f" % user.z_hop)}
-    G90 ; absolute positioning
-    G0 Z{user.z_hop} F{user.speed.z_hop} ; move head up
-    {% if not printer.gcode_move.absolute_coordinates %} G91 {% endif %} ; set back to relative
+    G90 # absolute positioning
+    G0 Z{user.z_hop} F{user.speed.z_hop} # move head up
+    {% if not printer.gcode_move.absolute_coordinates %} G91 {% endif %} # set back to relative
   {% endif %}
   {% if user.hw.mag_probe.ena == 'true' %}
     SAVE_GCODE_STATE NAME=STATE_PROBE_ACCURACY
@@ -231,7 +231,7 @@ gcode:
     RESTORE_GCODE_STATE NAME=STATE_PROBE_ACCURACY MOVE=1 MOVE_SPEED={(user.speed.travel|float / 60)}
   {% endif %}
   PROBE_ACCURACY_BASE {rawparams}
-  {% if user.hw.mag_probe.ena == 'true' and params.DOCK|default(1)|int == 1 %} ; use DOCK=0 to omit the probe docking
+  {% if user.hw.mag_probe.ena == 'true' and params.DOCK|default(1)|int == 1 %} # use DOCK=0 to omit the probe docking
     DETACH_PROBE
     RESTORE_GCODE_STATE NAME=STATE_PROBE_ACCURACY MOVE=1 MOVE_SPEED={(user.speed.travel|float / 60)}
   {% endif %}
@@ -244,9 +244,9 @@ gcode:
   # as we need to return to the position with the probe we need to be at least at z_hop
   {% if user.hw.mag_probe.ena == 'true' and printer.gcode_move.gcode_position.z < user.z_hop %}
     {action_respond_info("PROBE_ACCURACY: High must be above %.2f" % user.z_hop)}
-    G90 ; absolute positioning
-    G0 Z{user.z_hop} F{user.speed.z_hop} ; move head up
-    {% if not printer.gcode_move.absolute_coordinates %} G91 {% endif %} ; set back to relative
+    G90 # absolute positioning
+    G0 Z{user.z_hop} F{user.speed.z_hop} # move head up
+    {% if not printer.gcode_move.absolute_coordinates %} G91 {% endif %} # set back to relative
   {% endif %}
   {% if user.hw.mag_probe.ena == 'true' %}
     SAVE_GCODE_STATE NAME=STATE_PROBE
@@ -254,12 +254,12 @@ gcode:
     RESTORE_GCODE_STATE NAME=STATE_PROBE MOVE=1 MOVE_SPEED={(user.speed.travel|float / 60)}
   {% endif %}
   PROBE_BASE {rawparams}
-  G1 Z{user.z_hop} F{user.speed.z_hop} ; move head up to remove trigger
-  {% if user.hw.mag_probe.ena == 'true' and params.DOCK|default(1)|int == 1 %}  ; use DOCK=0 to omit the probe docking
+  G1 Z{user.z_hop} F{user.speed.z_hop} # move head up to remove trigger
+  {% if user.hw.mag_probe.ena == 'true' and params.DOCK|default(1)|int == 1 %}  # use DOCK=0 to omit the probe docking
     DETACH_PROBE
     RESTORE_GCODE_STATE NAME=STATE_PROBE MOVE=1 MOVE_SPEED={(user.speed.travel|float / 60)}
   {% endif %}
-  {% if not printer.gcode_move.absolute_coordinates %} G91 {% endif %} ; set back to relative
+  {% if not printer.gcode_move.absolute_coordinates %} G91 {% endif %} # set back to relative
   
 [gcode_macro PROBE_CALIBRATE]
 description: Calibrate the probe's z_offset and undock MagProbe
@@ -269,9 +269,9 @@ gcode:
   # as we need to return to the position with the probe we need to be at least at z_hop
   {% if user.hw.mag_probe.ena == 'true' and printer.gcode_move.gcode_position.z < user.z_hop %}
     {action_respond_info("PROBE_ACCURACY: High must be above %.2f" % user.z_hop)}
-    G90 ; absolute positioning
-    G0 Z{user.z_hop} F{user.speed.z_hop} ; move head up
-    {% if not printer.gcode_move.absolute_coordinates %} G91 {% endif %} ; set back to relative
+    G90 # absolute positioning
+    G0 Z{user.z_hop} F{user.speed.z_hop} # move head up
+    {% if not printer.gcode_move.absolute_coordinates %} G91 {% endif %} # set back to relative
   {% endif %}
   {% if user.hw.mag_probe.ena == 'true' %}
     SAVE_GCODE_STATE NAME=STATE_PROBE_CALIBRATE_ATTACH
