--- a/park_macro.cfg
+++ b/park_macro.cfg
@@ -18,24 +18,24 @@ gcode:
   {% endif %}
   {% set user = printer['gcode_macro _USER_VARIABLE'] %}
   {% set pos = params.P|lower if params.P and params.P|lower is in ['bed','center','front','frontlow','rear'] 
-         else  'bed' %} ; set park position default is bed
-  _CG28                 ; home if not already homed
-  G90                   ; absolute positioning
+         else  'bed' %} # set park position default is bed
+  _CG28                 # home if not already homed
+  G90                   # absolute positioning
   G0 X{user.park[pos].x} Y{user.park[pos].y} Z{user.park[pos].z} F{user.speed.travel}
-  {% if not printer.gcode_move.absolute_coordinates %} G91 {% endif %} ; set back to relative
+  {% if not printer.gcode_move.absolute_coordinates %} G91 {% endif %} # set back to relative
 
-#####################################################################
-#                   Added Items to the Stock menu                   #
-#####################################################################
-[menu __main __control __park_pos]
-type: input
-enable: {not printer.idle_timeout.state == "Printing"}
-index: 0
-name: Positon: {['Bed','Center','Rear','Front','FrontLow'][menu.input|int]}
-input: 0
-input_min: 0
-input_max: 4
-gcode:
-    {%- if menu.event == 'long_click' -%}
-      PARK P={['BED','CENTER','REAR','FRONT', 'FRONTLOW'][menu.input|int]}
-    {%- endif -%}
+# #####################################################################
+# #                   Added Items to the Stock menu                   #
+# #####################################################################
+# [menu __main __control __park_pos]
+# type: input
+# enable: {not printer.idle_timeout.state == "Printing"}
+# index: 0
+# name: Positon: {['Bed','Center','Rear','Front','FrontLow'][menu.input|int]}
+# input: 0
+# input_min: 0
+# input_max: 4
+# gcode:
+#     {%- if menu.event == 'long_click' -%}
+#       PARK P={['BED','CENTER','REAR','FRONT', 'FRONTLOW'][menu.input|int]}
+#     {%- endif -%}
