--- a/webclient.cfg
+++ b/webclient.cfg
@@ -32,7 +32,7 @@ gcode:
   CANCEL_PRINT_BASE
   {% if printer['gcode_macro PRINT_START'].state == 'Prepare' %}
     {% if not printer.extruder.can_extrude %}
-      {action_respond_info("Extruder Temp to low heat to %3.1f°C" % printer.configfile.settings.extruder.min_extrude_temp)}
+      {action_respond_info("Extruder Temp to low heat to %3.1fC" % printer.configfile.settings.extruder.min_extrude_temp)}
       M109 S{printer.configfile.settings.extruder.min_extrude_temp}
     {% endif %}
     M83
@@ -42,8 +42,8 @@ gcode:
   {% if params.PARK|default(0)|int == 1 or (not printer.pause_resume.is_paused and user.park.park_at_cancel) %}
     _TOOLHEAD_PARK P={params.PARK|default(0)} X={user.park.pause.x} Y={user.park.pause.y}
   {% endif %}
-  M107                                                     ; turn off fan
-  {% if user.hw.chamber.fan %} M141 S{vent_on} {% endif %} ; vent chamber (setting fan to below ambient)
+  M107                                                     # turn off fan
+  {% if user.hw.chamber.fan %} M141 S{vent_on} {% endif %} # vent chamber (setting fan to below ambient)
   _ADD_PRINT_TIME
   {% if params.ERROR|default(0)|int == 1 %}
     {% if user.hw.display.ena %} _LCD_KNOB COLOR=RED BLINK=0.2 {% endif %}
@@ -72,7 +72,7 @@ gcode:
   SET_GCODE_VARIABLE MACRO=PAUSE VARIABLE=restore VALUE="{restore}"
   {% if user.hw.display.ena %} _LCD_KNOB COLOR=BLUE BLINK=1 {% endif %}
   {% if not printer.extruder.can_extrude %}
-    {action_respond_info("Extruder Temp to low heat to %3.1f°C" % printer.configfile.settings.extruder.min_extrude_temp)}
+    {action_respond_info("Extruder Temp to low heat to %3.1fC" % printer.configfile.settings.extruder.min_extrude_temp)}
     M109 S{printer.configfile.settings.extruder.min_extrude_temp}
   {% endif %}
   M83
@@ -105,85 +105,85 @@ gcode:
   RESUME_BASE VELOCITY={params.VELOCITY|default(user.speed.travel/60)}  
   G0 E{user.filament.retract.pause} F{user.speed.retract}
   G0 F{restore.speed}
-  {% if restore.absolute.extrude %}         M82 {% endif %} ; set back to absolute
-  {% if not restore.absolute.coordinates %} G91 {% endif %} ; set back to relative
+  {% if restore.absolute.extrude %}         M82 {% endif %} # set back to absolute
+  {% if not restore.absolute.coordinates %} G91 {% endif %} # set back to relative
 
-###########################################################################
-#  Display Menu                                                           #
-#  !!! Caution: Remove all below if you do not have a display defined !!! #
-###########################################################################
-#   Main
-#   ...
-#   + SD Card
-#       + Show loaded file
-#       + Load File (only if not printing and no file loaded)
-#       + Unload File (only if not printing and a file is loaded)
-#       + Start printing (only if not printing and a file is loaded)
-#       + Pause printing (only while printing)
-#       + Resume printing (only while paused)
-#       + Cancel printing (only while paused)
+# ###########################################################################
+# #  Display Menu                                                           #
+# #  !!! Caution: Remove all below if you do not have a display defined !!! #
+# ###########################################################################
+# #   Main
+# #   ...
+# #   + SD Card
+# #       + Show loaded file
+# #       + Load File (only if not printing and no file loaded)
+# #       + Unload File (only if not printing and a file is loaded)
+# #       + Start printing (only if not printing and a file is loaded)
+# #       + Pause printing (only while printing)
+# #       + Resume printing (only while paused)
+# #       + Cancel printing (only while paused)
 
-[menu __main __sdcard]
-type: list
-enable: {'virtual_sdcard' in printer}
-name: SD Card
+# [menu __main __sdcard]
+# type: list
+# enable: {'virtual_sdcard' in printer}
+# name: SD Card
 
-[menu __main __sdcard __file]
-type: command
-name: File: {printer.print_stats.filename}
-index: 0
+# [menu __main __sdcard __file]
+# type: command
+# name: File: {printer.print_stats.filename}
+# index: 0
 
-[menu __main __sdcard __load]
-type: vsdlist
-#type: list
-#event_sender: __vsdfiles
-enable: {not printer.virtual_sdcard.file_path and not (printer.print_stats.state == "printing" or printer.print_stats.state == "paused")}
-name: Load file
-index: 1
+# [menu __main __sdcard __load]
+# type: vsdlist
+# #type: list
+# #event_sender: __vsdfiles
+# enable: {not printer.virtual_sdcard.file_path and not (printer.print_stats.state == "printing" or printer.print_stats.state == "paused")}
+# name: Load file
+# index: 1
 
-[menu __main __sdcard __unload]
-type: command
-enable: {printer.virtual_sdcard.file_path and not (printer.print_stats.state == "printing" or printer.print_stats.state == "paused")}
-name: Unload file
-index: 2
-gcode:
-  # back is needed to reload the modified menu structure
-  {menu.back()}
-  SDCARD_RESET_FILE
+# [menu __main __sdcard __unload]
+# type: command
+# enable: {printer.virtual_sdcard.file_path and not (printer.print_stats.state == "printing" or printer.print_stats.state == "paused")}
+# name: Unload file
+# index: 2
+# gcode:
+#   # back is needed to reload the modified menu structure
+#   {menu.back()}
+#   SDCARD_RESET_FILE
 
-[menu __main __sdcard __start]
-type: command
-enable: {printer.virtual_sdcard.file_path and not (printer.print_stats.state == "printing" or printer.print_stats.state == "paused")}
-name: Start print
-index: 3
-gcode:
-  {menu.exit()}
-  UPDATE_DELAYED_GCODE ID=_DELAY_DISPLAY_OFF DURATION=10
-  M24
+# [menu __main __sdcard __start]
+# type: command
+# enable: {printer.virtual_sdcard.file_path and not (printer.print_stats.state == "printing" or printer.print_stats.state == "paused")}
+# name: Start print
+# index: 3
+# gcode:
+#   {menu.exit()}
+#   UPDATE_DELAYED_GCODE ID=_DELAY_DISPLAY_OFF DURATION=10
+#   M24
 
-[menu __main __sdcard __pause]
-type: command
-enable: {printer.print_stats.state == "printing"}
-name: Pause print
-gcode:
-  # back is needed to reload the modified menu structure
-  {menu.back()}
-  PAUSE
+# [menu __main __sdcard __pause]
+# type: command
+# enable: {printer.print_stats.state == "printing"}
+# name: Pause print
+# gcode:
+#   # back is needed to reload the modified menu structure
+#   {menu.back()}
+#   PAUSE
 
-[menu __main __sdcard __resume]
-type: command
-enable: {printer.print_stats.state == "paused"}
-name: Resume print
-gcode:
-  {menu.exit()}
-  UPDATE_DELAYED_GCODE ID=_DELAY_DISPLAY_OFF DURATION=10
-  RESUME
+# [menu __main __sdcard __resume]
+# type: command
+# enable: {printer.print_stats.state == "paused"}
+# name: Resume print
+# gcode:
+#   {menu.exit()}
+#   UPDATE_DELAYED_GCODE ID=_DELAY_DISPLAY_OFF DURATION=10
+#   RESUME
 
-[menu __main __sdcard __cancel]
-type: command
-enable: {printer.print_stats.state == "paused"}
-name: Cancel print
-gcode:
-  {menu.exit()}
-  UPDATE_DELAYED_GCODE ID=_DELAY_DISPLAY_OFF DURATION=10
-  CANCEL_PRINT
+# [menu __main __sdcard __cancel]
+# type: command
+# enable: {printer.print_stats.state == "paused"}
+# name: Cancel print
+# gcode:
+#   {menu.exit()}
+#   UPDATE_DELAYED_GCODE ID=_DELAY_DISPLAY_OFF DURATION=10
+#   CANCEL_PRINT
