--- a/caselight.cfg
+++ b/caselight.cfg
@@ -2,12 +2,19 @@
 #  Caselight pin Definition
 #####################################################################
 ## Caselight - XYE board, HB Connector
+# [output_pin caselight]
+# pin: P2.5
+# pwm: true
+# hardware_pwm: true
+# shutdown_value: 0
+# cycle_time: 0.0001
 [output_pin caselight]
-pin: P2.5
-pwm: true
-hardware_pwm: true
+pin: PD14
+pwm:true
 shutdown_value: 0
-cycle_time: 0.0001
+value:.15
+cycle_time: 0.009
+pwm: True
 
 #####################################################################
 #  Macros
@@ -29,16 +36,16 @@ description: Toggle light
 gcode:
   {%if printer['output_pin caselight'].value == 0 %} _CASELIGHT_ON {% else %} _CASELIGHT_OFF {% endif %}
   
-#####################################################################
-# 	Display Menu definition                                        #
-#####################################################################
-[menu __main __control __caselightonoff]
-type: input
-enable: {'output_pin caselight' in printer}
-name: Lights: {'ON ' if menu.input else 'OFF'}
-input: {printer['output_pin caselight'].value}
-input_min: 0
-input_max: 1
-input_step: 1
-gcode:
-  {% if menu.input %} _CASELIGHT_ON {% else %} _CASELIGHT_OFF {% endif %}
+# #####################################################################
+# # 	Display Menu definition                                        #
+# #####################################################################
+# [menu __main __control __caselightonoff]
+# type: input
+# enable: {'output_pin caselight' in printer}
+# name: Lights: {'ON ' if menu.input else 'OFF'}
+# input: {printer['output_pin caselight'].value}
+# input_min: 0
+# input_max: 1
+# input_step: 1
+# gcode:
+#   {% if menu.input %} _CASELIGHT_ON {% else %} _CASELIGHT_OFF {% endif %}
