--- a/power.cfg
+++ b/power.cfg
@@ -21,24 +21,24 @@ timeout: 7200
 #####################################################################
 ## Use a pin to switch on a relay for the Extruder heater if klipper is active
 ## XYE board, UPWR_DET_PIN Connector
-[output_pin extruder_relay]
-## negativ logic
-pin: !P1.0
-pwm: false
-shutdown_value: 0
-value: 1
+# [output_pin extruder_relay]
+# ## negativ logic
+# pin: !P1.0
+# pwm: false
+# shutdown_value: 0
+# value: 1
 
 #####################################################################
 #  Safety Relay heater_bed
 #####################################################################
 ## Use a pin to switch on a relay for the  heater_bed if klipper is active
 ## Z board, UPWR_DET_PIN Connector
-[output_pin heater_bed_relay]
-## negativ logic
-pin: !z:P1.0
-pwm: false
-shutdown_value: 0
-value: 1
+# [output_pin heater_bed_relay]
+# ## negativ logic
+# pin: !z:P1.0
+# pwm: false
+# shutdown_value: 0
+# value: 1
 
 #####################################################################
 # 	Macro
@@ -93,14 +93,14 @@ gcode:
   M400
   _SHUTDOWN_PI
   
-#####################################################################
-# 	LCD Menu & Macro to shutdown the PI
-#####################################################################
-[menu __main __power_off]
-type: command
-enable: {not printer.idle_timeout.state == "Printing"}
-name: Power Off
-index: 0
-gcode:
-    {menu.exit()}
-    PRINTER_OFF          
+# #####################################################################
+# # 	LCD Menu & Macro to shutdown the PI
+# #####################################################################
+# [menu __main __power_off]
+# type: command
+# enable: {not printer.idle_timeout.state == "Printing"}
+# name: Power Off
+# index: 0
+# gcode:
+#     {menu.exit()}
+#     PRINTER_OFF          
