--- a/printer.cfg
+++ b/printer.cfg
@@ -13,43 +13,28 @@
 # | UART         | 1.10 | 1.9  | 1.8  | 1.4  | 1.1  |    | 2.3  |  2.0  |  0.10 |   1.0   |
 # +--------------+------+------+------+------+------+    +------+-------+-------+---------+
 
-#  MCU definition
-##	MCU for X/Y/E steppers main MCU
-##	[X in X] - B Motor
-##	[Y in Y] - A Motor
-##	[E in E0] - Extruder
 [mcu]
-serial: /dev/serial/by-id/usb-Klipper_lpc1769_1840010F871C4AAF863E7C5DC32000F5-if00
+serial: /dev/serial/by-id/usb-Klipper_stm32f446xx_380012000B50534E4E313120-if00
 restart_method: command
 
-##	MCU for Z steppers
-##	[Z  in X]  - Front Left
-##	[Z1 in Y]  - Rear Left
-##	[Z2 in Z]  - Rear Right
-##	[Z3 in E0] - Front Right
-[mcu z]
-serial: /dev/serial/by-id/usb-Klipper_lpc1769_07300110871C4AAFBF427C5DC72000F5-if00
-restart_method: command
-
-##  MCU for adxl345 acelometer
 [mcu rpi]
 serial: /tmp/klipper_host_mcu
 
 #  General Printer definition
 [printer]
 kinematics: corexy
-max_velocity: 450
+max_velocity: 350
 max_accel: 7000
 max_accel_to_decel: 4000
-max_z_velocity: 30
-max_z_accel: 700
+max_z_velocity: 38
+max_z_accel: 220
 square_corner_velocity: 5.0 
 
 #  Stepper Settings
 [include stepper.cfg]
 [include tmc.cfg]
 
-#  Extruder & Bed; Heater Verification (default values)
+#  Extruder & Bed# Heater Verification (default values)
 [include heater.cfg]
 [include heater_verify.cfg]
 
@@ -71,9 +56,9 @@ square_corner_velocity: 5.0
 #  Resonance compensation
 [include input_shaper.cfg]
 
-#   Display & Custom Menu
-[include lcd.cfg]
-[include display_menu.cfg]
+# # #   Display & Custom Menu
+# [include lcd.cfg]
+# [include display_menu.cfg]
 
 #  Macros
 [include basic_macro.cfg]
@@ -84,7 +69,7 @@ square_corner_velocity: 5.0
 #  moonraker/mainsail
 [include webclient.cfg]
 
-# Power relays
+# # Power relays
 [include power.cfg]
 
 #  print and service time storage
@@ -93,15 +78,15 @@ square_corner_velocity: 5.0
 #  probe accuracy test
 #[include test_probe_accuracy.cfg]
 
-#  flexplate select menu
-[include flexplate.cfg]
+# # #  flexplate select menu
+# [include flexplate.cfg]
 
 #  filament and pressure advance
 [include filament.cfg]
 [include pressure_advance.cfg]
 
-#  filament runout sensor
-[include runout.cfg]
+# # #  filament runout sensor
+# [include runout.cfg]
 
 #  force move used only if gantry is at z max
 [include force_move.cfg]
@@ -112,11 +97,11 @@ square_corner_velocity: 5.0
 #  Z_calibration needs <https://github.com/protoloft/klipper_z_calibration>
 [include z_calibration.cfg]
 
-#  timelaps needs <https://github.com/mainsail-crew/moonraker-timelapse.git>
-[include timelapse.cfg]
+# #  timelaps needs <https://github.com/mainsail-crew/moonraker-timelapse.git>
+# [include timelapse.cfg]
 
-#  Enable Execute Object (beta) use https://github.com/troy-jacobson/klipper/tree/exclude-object-pr
-[exclude_object]
+# #  Enable Execute Object (beta) use https://github.com/troy-jacobson/klipper/tree/exclude-object-pr
+# [exclude_object]
 
 #  File location of stored varibales
 [save_variables]
@@ -124,7 +109,7 @@ filename: /home/pi/klipper_config/.variables.stb
 
 #  Virtual SD Card
 [virtual_sdcard]
-path: /home/pi/sdcard
+path: ~/gcode_files
 
 #  macro that run at klipper start
 [delayed_gcode _INIT]
@@ -189,74 +174,74 @@ gcode:
   ##                     start of user defines                     ## 
   ## this needs to be changed for your printer                     ##
   ###################################################################
-  #{% set user_z_endstop_xy = [232.0,355.0] %}  ; z Endstop position insight right profil
-  {% set user_z_endstop_xy = [123.0,355.0] %}  ; z Endstop position insight left profil
-  {% set user_z_endstop_hop = 7.5 %}           ; z hop for moves e.g homimg
-  {% set user_z_home_current = 0.3 %}          ; reduced homing curent for z
-  {% set user_home_accel = 1200 %}             ; reduced ACCEL for homing
-  {% set user_bed_y_offset = 5 %}              ; Endstop offset to bed max y
+  #{% set user_z_endstop_xy = [232.0,355.0] %}  # z Endstop position insight right profil
+  {% set user_z_endstop_xy = [207.0,304.0] %}  # z Endstop position insight left profil
+  {% set user_z_endstop_hop = 7.5 %}           # z hop for moves e.g homimg
+  {% set user_z_home_current = 0.3 %}          # reduced homing curent for z
+  {% set user_home_accel = 1200 %}             # reduced ACCEL for homing
+  {% set user_bed_y_offset = 5 %}              # Endstop offset to bed max y
   ##### all user defined speeds [mm/sec] #####
-  {% set user_z_hop_speed = 15 %}              ; default z_hop speed
-  {% set user_retract_speed = 30 %}            ; default retract/extrude speed
-  {% set user_travel_speed = 300 %}            ; travel speed e.g park, dock ...
-  {% set user_probe_dock_speed = 50 %}         ; dock speed for attach/dock
-  {% set user_filament_load_speed = 50 %}      ; load/unload speed
-  {% set user_wipe_speed = 60 %}               ; wipe move speed 
-  {% set user_prime_speed = 25 %}              ; prime line speed  
+  {% set user_z_hop_speed = 15 %}              # default z_hop speed
+  {% set user_retract_speed = 30 %}            # default retract/extrude speed
+  {% set user_travel_speed = 300 %}            # travel speed e.g park, dock ...
+  {% set user_probe_dock_speed = 50 %}         # dock speed for attach/dock
+  {% set user_filament_load_speed = 50 %}      # load/unload speed
+  {% set user_wipe_speed = 60 %}               # wipe move speed 
+  {% set user_prime_speed = 25 %}              # prime line speed  
   ##### Mag Probe #####
-  {% set user_probe_dock_pos = [0,355] %}      ; position of the dock 
-  {% set user_probe_delta_x = 30 %}            ; x offset for position before dock
-  {% set user_probe_delta_y = -30 %}           ; y offset to move probe out of dock
-  {% set user_z_probe_hop = 15.5 %}            ; z minimum heigh to avoid crash
+  {% set user_probe_dock_pos = [11,305] %}      # position of the dock 
+  {% set user_probe_delta_x = 30 %}            # x offset for position before dock
+  {% set user_probe_delta_y = -30 %}           # y offset to move probe out of dock
+  {% set user_z_probe_hop = 15.5 %}            # z minimum heigh to avoid crash
   ##### Park Position #####
-  {% set user_park_xy_delta = 25 %}            ; distance for x or y from the edge
-  {% set user_park_z_max_delta = 40 %}         ; insure to do not hit cam in front
-  {% set user_park_z_min = 30 %}               ; minimal z from bed
-  {% set user_park_pause_z_delta = 2.0 %}      ; distance to increase head while PAUSE/CANCEL_PRINT
-  {% set user_park_at_cancel = False %}        ; park head at CANCEL_PRINT if not paused [False/True]
+  {% set user_park_xy_delta = 25 %}            # distance for x or y from the edge
+  {% set user_park_z_max_delta = 40 %}         # insure to do not hit cam in front
+  {% set user_park_z_min = 30 %}               # minimal z from bed
+  {% set user_park_pause_z_delta = 2.0 %}      # distance to increase head while PAUSE/CANCEL_PRINT
+  {% set user_park_at_cancel = False %}        # park head at CANCEL_PRINT if not paused [False/True]
   ##### Filament #####
-  {% set user_extruder_min_add = 30 %}         ; Temperature add to min Extruder temp
-  {% set user_load_distance = 90 %}            ; load distance while load filament
-  {% set user_load_extrude = 50 %}             ; extrude distance while load filament
-  {% set user_unload_distance = 75 %}          ; unload distance while unload filament
-  {% set user_retract_end = 2 %}               ; retract distance at PRINT_END or CANCEL_PRINT
-  {% set user_retract_pause = 1 %}             ; retract/extrude distance while PAUSE or RESUME
+  {% set user_extruder_min_add = 30 %}         # Temperature add to min Extruder temp
+  {% set user_load_distance = 90 %}            # load distance while load filament
+  {% set user_load_extrude = 50 %}             # extrude distance while load filament
+  {% set user_unload_distance = 75 %}          # unload distance while unload filament
+  {% set user_retract_end = 2 %}               # retract distance at PRINT_END or CANCEL_PRINT
+  {% set user_retract_pause = 1 %}             # retract/extrude distance while PAUSE or RESUME
   ##### Purge & Brush #####
-  {% set user_brush_pos = 'right' %}           ; left/right profile used
-  #{% set user__brush_x_middle = 100 %}        ; mid point of brush at left profile
-  {% set user_brush_x_middle = 250 %}          ; mid point of brush at right profil
-  {% set user_brush_x_width = 40 %}            ; width of brush
-  {% set user_brush_y_start = 351 %}           ; start point at y
-  {% set user_wipe_z = 1.0 %}                  ; z for wipe moves
-  {% set user_wipe_cnt = 5 %}                  ; number of full wipes
-  {% set user_z_purge = 2.5 %}                 ; z above purge bucket
+  {% set user_brush_pos = 'right' %}           # left/right profile used
+  #{% set user__brush_x_middle = 100 %}        # mid point of brush at left profile
+  {% set user_brush_x_middle = 250 %}          # mid point of brush at right profil
+  {% set user_brush_x_width = 40 %}            # width of brush
+  {% set user_brush_y_start = 351 %}           # start point at y
+  {% set user_wipe_z = 1.0 %}                  # z for wipe moves
+  {% set user_wipe_cnt = 5 %}                  # number of full wipes
+  {% set user_z_purge = 2.5 %}                 # z above purge bucket
   ##### PRINT_START/STOP #####
-  {% set user_print_start_bed_up = 10 %}       ; bed temp raise for faster heat soak
-  {% set user_print_start_ival = 1 %}          ; wait time per call in sec
-  {% set user_print_start_extruder_time = 3 %} ; time in minutes before soak end to start extruder heating 
-  {% set user_print_start_bed_time = 3 %}      ; time in minutes before soak end to set bed target temp
-  {% set user_print_start_prime_mult = 2 %}    ; multiplier for prime line hight 
-  {% set user_unload_sd = True %}              ; unload sd file at PRINT_END or CANCEL_PRINT [True,False]
+  {% set user_print_start_bed_up = 10 %}       # bed temp raise for faster heat soak
+  {% set user_print_start_ival = 1 %}          # wait time per call in sec
+  {% set user_print_start_extruder_time = 3 %} # time in minutes before soak end to start extruder heating 
+  {% set user_print_start_bed_time = 3 %}      # time in minutes before soak end to set bed target temp
+  {% set user_print_start_prime_mult = 2 %}    # multiplier for prime line hight 
+  {% set user_unload_sd = True %}              # unload sd file at PRINT_END or CANCEL_PRINT [True,False]
   ##### Prime Line #####
-  {% set user_prime_start_xy = [5.0,30.0] %}   ; x&y start coordinates of prime line
-  {% set user_prime_z = 0.34 %}                ; default prime layer hight
-  {% set user_prime_dir = 'Y+' %}              ; direction of prime line (X+, X-, Y+, Y-)
-  {% set user_prime_spacing = 0.4 %}           ; distance between line, move will allways positive
-  {% set user_prime_lenght = 220 %}            ; length of prime line
-  {% set user_prime_seg = 11 %}                ; segments in that the prime line is splitted
-  {% set user_prime_extrude_per_seg = 2 %}     ; amount of filament extruded per segment
+  {% set user_prime_start_xy = [5.0,30.0] %}   # x&y start coordinates of prime line
+  {% set user_prime_z = 0.34 %}                # default prime layer hight
+  {% set user_prime_dir = 'Y+' %}              # direction of prime line (X+, X-, Y+, Y-)
+  {% set user_prime_spacing = 0.4 %}           # distance between line, move will allways positive
+  {% set user_prime_length = 220 %}            # length of prime line
+  {% set user_prime_seg = 11 %}                # segments in that the prime line is splitted
+  {% set user_prime_extrude_per_seg = 2 %}     # amount of filament extruded per segment
   ##### Respond defaults #####
   # Default behaivior for output messages of the macro 0: no output 1: console output
-  {% set user_respond_set_z_current = 0 %}     ; Macro: _SET_Z_CURRENT
-  {% set user_respond_set_acc = 0 %}           ; Macro: _SET_ACC
-  {% set user_respond_probe_action = 1 %}      ; Macro: _PROBE_ACTION
-  {% set user_respond_layer = 0 %}             ; Macro: _LAYER
+  {% set user_respond_set_z_current = 0 %}     # Macro: _SET_Z_CURRENT
+  {% set user_respond_set_acc = 0 %}           # Macro: _SET_ACC
+  {% set user_respond_probe_action = 1 %}      # Macro: _PROBE_ACTION
+  {% set user_respond_layer = 0 %}             # Macro: _LAYER
   ##### Peripheral #####
-  {% set user_filter_on = 0.5 %}               ; filter on value
-  {% set user_filter_use_time = 80 %}          ; Nevermore change warning limit 
-  {% set user_vent_on = 15 %}                  ; chamber fan on temperature                        
-  {% set user_caselight_on = 0.4 %}            ; caselight on value
-  {% set user_fan_run_after_print = 30 %}      ; time in min to run filter and chamber exhaust after print finsih 
+  {% set user_filter_on = 0 %}               # filter on value
+  {% set user_filter_use_time = 0 %}          # Nevermore change warning limit 
+  {% set user_vent_on = 0 %}                  # chamber fan on temperature                        
+  {% set user_caselight_on = 0.4 %}            # caselight on value
+  {% set user_fan_run_after_print = 0 %}      # time in min to run filter and chamber exhaust after print finsih 
   ###################################################################
   ##                      end of user defines                      ## 
   ###################################################################
@@ -278,9 +263,9 @@ gcode:
                                          else 'motion' if 'filament_motion_sensor runout' in printer.configfile.settings
                                          else 'file'   if 'save_variables' in printer and filament_loaded in printer.save_variables.variables 
                                          else 'none'},
-                   'relay'         : {'ena' : True if 'output_pin extruder_relay'   in printer.configfile.settings and
-                                                      'output_pin heater_bed_relay' in printer.configfile.settings 
-                                         else False},
+                  #  'relay'         : {'ena' : True if 'output_pin extruder_relay'   in printer.configfile.settings and
+                  #                                     'output_pin heater_bed_relay' in printer.configfile.settings 
+                   'relay'         : {'ena' : False},
                    'auto_z_offset' : {'type': 'z_calib+flexplate' if 'z_calibration' in printer and 'save_variables' in printer and 'plates' in printer.save_variables.variables
                                          else 'z_calib'           if 'z_calibration' in printer
                                          else 'flexplate'         if 'save_variables' in printer and 'plates' in printer.save_variables.variables 
@@ -363,7 +348,7 @@ gcode:
   {% set prime_dic = {'pos'             : {'x':user_prime_start_xy[0], 'y':user_prime_start_xy[1], 'z':user_prime_z},
                       'dir'             : user_prime_dir,
                       'spacing'         : user_prime_spacing,
-                      'length_per_seg'  : user_prime_lenght / user_prime_seg,
+                      'length_per_seg'  : user_prime_length / user_prime_seg,
                       'seg'             : user_prime_seg,
                       'extrude_per_seg' : user_prime_extrude_per_seg} %}
   {% set print_start_dic = {'bed_up'     : user_print_start_bed_up|float|round(1),
@@ -402,64 +387,15 @@ gcode:
 #*#
 #*# [extruder]
 #*# control = pid
-#*# pid_kp = 23.886
-#*# pid_ki = 1.254
-#*# pid_kd = 113.757
+#*# pid_kp = 23.018
+#*# pid_ki = 2.102
+#*# pid_kd = 63.012
 #*#
 #*# [heater_bed]
 #*# control = pid
-#*# pid_kp = 42.778
-#*# pid_ki = 1.501
-#*# pid_kd = 304.788
+#*# pid_kp = 43.797
+#*# pid_ki = 0.970
+#*# pid_kd = 494.358
 #*#
 #*# [stepper_z]
-#*# position_endstop = 2.177
-#*#
-#*# [probe]
-#*# z_offset = 0
-#*#
-#*# [bed_mesh En_Thick-Bed_Temp-0C]
-#*# version = 1
-#*# points =
-#*# 	-0.055625, -0.001562, 0.030000, 0.019375, 0.009063, 0.029375, 0.026875, 0.062500, 0.096875
-#*# 	-0.040625, 0.008125, 0.039375, 0.035313, 0.021250, 0.048125, 0.048750, 0.079375, 0.122813
-#*# 	-0.043437, -0.005625, 0.017500, 0.014063, 0.004063, 0.023438, 0.040938, 0.070313, 0.101250
-#*# 	-0.036250, -0.004062, 0.016563, 0.014688, 0.007188, 0.025625, 0.032813, 0.065000, 0.093750
-#*# 	-0.025312, -0.003750, 0.013438, 0.008438, 0.000000, 0.017500, 0.029375, 0.065000, 0.090312
-#*# 	-0.005313, 0.007812, 0.026250, 0.021875, 0.011875, 0.029375, 0.035625, 0.069062, 0.090000
-#*# 	0.001562, 0.014375, 0.028125, 0.013125, 0.003750, 0.018125, 0.024687, 0.050000, 0.073125
-#*# 	0.020625, 0.029375, 0.033125, 0.014062, 0.007187, 0.027187, 0.028125, 0.049375, 0.056250
-#*# 	0.050937, 0.044375, 0.040000, 0.021875, 0.011875, 0.030937, 0.037812, 0.047500, 0.050625
-#*# tension = 0.2
-#*# min_x = 30.0
-#*# algo = bicubic
-#*# y_count = 9
-#*# mesh_y_pps = 2
-#*# min_y = 30.0
-#*# x_count = 9
-#*# max_y = 320.0
-#*# mesh_x_pps = 2
-#*# max_x = 320.0
-#*#
-#*# [bed_mesh Mueller-Bed_Temp-0C]
-#*# version = 1
-#*# points =
-#*# 	-0.015000, 0.021875, 0.030000, 0.021250, 0.016875, 0.028125, 0.031250, 0.030625, 0.032500
-#*# 	-0.017500, 0.021875, 0.036250, 0.031875, 0.026250, 0.046875, 0.048750, 0.034375, 0.045625
-#*# 	-0.016875, 0.011875, 0.015000, 0.003750, 0.006250, 0.025625, 0.030625, 0.026250, 0.022500
-#*# 	-0.008750, 0.018125, 0.029375, 0.005000, 0.010625, 0.021250, 0.030625, 0.030625, 0.026875
-#*# 	-0.003125, 0.005000, 0.013125, 0.000000, 0.000000, 0.015000, 0.028750, 0.036875, 0.032500
-#*# 	-0.001875, 0.008750, 0.015000, 0.001875, 0.005625, 0.018125, 0.030000, 0.031250, 0.037500
-#*# 	0.003750, 0.016875, 0.028750, 0.006875, 0.006250, 0.026250, 0.030000, 0.035000, 0.028750
-#*# 	0.023125, 0.036250, 0.036250, 0.013125, 0.018750, 0.032500, 0.041875, 0.036875, 0.034375
-#*# 	0.062500, 0.062500, 0.061875, 0.031875, 0.031875, 0.054375, 0.070625, 0.061250, 0.044375
-#*# x_count = 9
-#*# y_count = 9
-#*# mesh_x_pps = 2
-#*# mesh_y_pps = 2
-#*# algo = bicubic
-#*# tension = 0.2
-#*# min_x = 30.0
-#*# max_x = 320.0
-#*# min_y = 30.0
-#*# max_y = 320.0
+#*# position_endstop = 0.050
