--- a/probe_qgl.cfg
+++ b/probe_qgl.cfg
@@ -31,22 +31,23 @@
 ##  samples_tolerance: 0.005
 ##  samples_tolerance_retries: 10
 ##  y_offset: 19.75
-##  z_offset: 6.42 ;not needed since a Endstop is used
+##  z_offset: 6.42 #not needed since a Endstop is used
 ############### Different Probe Settings ##############
 [probe]
-##  Inductive Probe / Mag Probe
-##  This probe is not used for Z height 
-pin: ^z:P0.10
+pin: PG15#PB13  For Klicky
+#pin: ~PB7#PB13  For Inductive
 x_offset: 0
-y_offset: 19.75
+y_offset: 0#16.95 #18.75
+z_offset: 8.5
 #z_offset: 0
-speed: 7.5
-lift_speed: 30.0
-samples: 5
+# speed: 3.5 #2.5
+speed: 6 #2.5
+lift_speed: 15
+samples: 3
 samples_result: median
-sample_retract_dist: 0.8
-samples_tolerance: 0.005
-samples_tolerance_retries: 10
+sample_retract_dist: 2.6
+samples_tolerance: 0.01
+samples_tolerance_retries: 4
 
 #####################################################################
 #  Disable Heater while probing
@@ -59,21 +60,41 @@ samples_tolerance_retries: 10
 #  Gantry Adjustment Routines
 #####################################################################
 [quad_gantry_level]
-##  Min & Max gantry corners - measure from nozzle to respective belt positions
 gantry_corners:
-	-56,-1
-	406,420
-##  Probe points; this are nozzel positions we need to substract the probe offset
+	-60,-10
+    360,370
 points:
-	100,50
-	100,250
-	250,250
-	250,50
-speed: 200
-horizontal_move_z: 20 ; MagProbe 20, Vinda or Omron 5
-retries: 10
-retry_tolerance: 0.005
-max_adjust: 15
+	40,40
+  40,250
+	260,250
+	260,40
+	# 85,85
+  # 85,215
+	# 215,215
+	# 215,85
+speed: 350
+# horizontal_move_z: 15#12 #9
+horizontal_move_z: 14
+retries: 4
+retry_tolerance: 0.01
+max_adjust: 8
+
+# [quad_gantry_level]
+# ##  Min & Max gantry corners - measure from nozzle to respective belt positions
+# gantry_corners:
+# 	-56,-1
+# 	406,420
+# ##  Probe points# this are nozzel positions we need to substract the probe offset
+# points:
+# 	100,50
+# 	100,250
+# 	250,250
+# 	250,50
+# speed: 200
+# horizontal_move_z: 20 # MagProbe 20, Vinda or Omron 5
+# retries: 10
+# retry_tolerance: 0.005
+# max_adjust: 15
 
 #####################################################################
 #  Macros
@@ -83,12 +104,12 @@ description: Conform a moving, twistable gantry to the shape of a stationary bed
 rename_existing: QUAD_GANTRY_LEVEL_BASE
 gcode:
   {% set user   = printer['gcode_macro _USER_VARIABLE'] %}
-  {% set move_z = [user.z_hop, printer.toolhead.position.z]|max %} ; calc movement high
+  {% set move_z = [user.z_hop, printer.toolhead.position.z]|max %} # calc movement high
   _SET_Z_CURRENT VAL=HOME
   {% if "xyz" not in printer.toolhead.homed_axes %} G28 {% endif %}
   {% if user.hw.mag_probe.ena %}
     G90
-    G0 Z{move_z} F{user.speed.z_hop} ; move head up to insure Probe is not triggered in error case
+    G0 Z{move_z} F{user.speed.z_hop} # move head up to insure Probe is not triggered in error case
     ATTACH_PROBE 
   {% endif %}
   QUAD_GANTRY_LEVEL_BASE {rawparams}
@@ -99,21 +120,21 @@ gcode:
     G90
     G0 X{user.park.bed.x} Y{user.park.bed.y} Z{user.park.bed.z} F{user.speed.travel}
   {% endif %}
-  {% if not printer.gcode_move.absolute_coordinates %} G91 {% endif %} ; set back to relative
+  {% if not printer.gcode_move.absolute_coordinates %} G91 {% endif %} # set back to relative
 
 [gcode_macro CHECK_QGL]
 description: Run after QUAD_GANTRY_LEVEL to insure it passes
 gcode:
   {% set user        = printer['gcode_macro _USER_VARIABLE'] %}
-  {% set probe_state = printer['gcode_macro _MAG_PROBE'].state|default('unknown')|lower %} ; get probe state
+  {% set probe_state = printer['gcode_macro _MAG_PROBE'].state|default('unknown')|lower %} # get probe state
   {% set probe_ok    = False if user.hw.mag_probe.ena and (probe_state == 'error' or probe_state == 'unknown')
                   else True %}  
-  {% if not printer.quad_gantry_level.applied or not probe_ok %} ; check QGL and probe status
+  {% if not printer.quad_gantry_level.applied or not probe_ok %} # check QGL and probe status
     {action_respond_info("QGL CHECK: Fail therefore cancel the print")}
     PAUSE_BASE
     G90
-    G0 Z{user.z_hop} F{user.speed.z_hop}                                 ; move nozzle to z high first
-    {% if not printer.gcode_move.absolute_coordinates %} G91 {% endif %} ; set back to relative
+    G0 Z{user.z_hop} F{user.speed.z_hop}                                 # move nozzle to z high first
+    {% if not printer.gcode_move.absolute_coordinates %} G91 {% endif %} # set back to relative
     {% if user.hw.mag_probe.ena %} DETACH_PROBE {% endif %}
     CANCEL_PRINT PARK=1 ERROR=1
   {% else %}
