--- a/runout.cfg
+++ b/runout.cfg
@@ -96,31 +96,31 @@ gcode:
 [gcode_macro M600]
 description: Filament change
 gcode:
-  PAUSE Y=10   ; everything needed is defined there
+  PAUSE Y=10   # everything needed is defined there
 
-#####################################################################
-# 	LCD Menu
-#####################################################################   
-[menu __main __control __runoutonoff_switch]
-type: input
-enable: {'filament_switch_sensor runout' in printer.configfile.settings}
-name: Runout: {'ON ' if menu.input else 'OFF'}
-input: {printer['filament_switch_sensor runout'].enabled}
-input_min: 0
-input_max: 1
-input_step: 1
-index: 4
-gcode:
-  SET_FILAMENT_SENSOR SENSOR=runout ENABLE={menu.input|int}
+# #####################################################################
+# # 	LCD Menu
+# #####################################################################   
+# [menu __main __control __runoutonoff_switch]
+# type: input
+# enable: {'filament_switch_sensor runout' in printer.configfile.settings}
+# name: Runout: {'ON ' if menu.input else 'OFF'}
+# input: {printer['filament_switch_sensor runout'].enabled}
+# input_min: 0
+# input_max: 1
+# input_step: 1
+# index: 4
+# gcode:
+#   SET_FILAMENT_SENSOR SENSOR=runout ENABLE={menu.input|int}
   
-[menu __main __control __runoutonoff_motion]
-type: input
-enable: {'filament_motion_sensor runout' in printer.configfile.settings}
-name: Runout: {'ON ' if menu.input else 'OFF'}
-input: {printer['filament_motion_sensor runout'].enabled}
-input_min: 0
-input_max: 1
-input_step: 1
-index: 4
-gcode:
-  SET_FILAMENT_SENSOR SENSOR=runout ENABLE={menu.input|int}
+# [menu __main __control __runoutonoff_motion]
+# type: input
+# enable: {'filament_motion_sensor runout' in printer.configfile.settings}
+# name: Runout: {'ON ' if menu.input else 'OFF'}
+# input: {printer['filament_motion_sensor runout'].enabled}
+# input_min: 0
+# input_max: 1
+# input_step: 1
+# index: 4
+# gcode:
+#   SET_FILAMENT_SENSOR SENSOR=runout ENABLE={menu.input|int}
