--- a/stepper.cfg
+++ b/stepper.cfg
@@ -1,123 +1,76 @@
 #####################################################################
 #  Stepper Settings
 #####################################################################
-##  MCU - In X Position
-##  B Stepper - Left
 [stepper_x]
-step_pin: P2.2
-## TMC2209
-#dir_pin: !P2.6
-## TMC5160
-dir_pin: P2.6
-enable_pin: !P2.1
-##  160 steps per mm -> 0.00625 mm per step 
-##  0.9 Stepper Motor
-full_steps_per_rotation: 400
-microsteps: 32
+enable_pin: !PF14
+step_pin: PF13
+dir_pin: PF12
 rotation_distance: 40
-endstop_pin: ^!P1.29
+microsteps: 16
+full_steps_per_rotation:200
+endstop_pin: ^PG6
 position_min: 0
-position_endstop: 350
-position_max: 350
-homing_speed: 100
-homing_retract_dist: 2
-second_homing_speed: 5
+position_endstop: 300
+position_max: 302
+homing_speed: 90
+homing_retract_dist: 3.5
 homing_positive_dir: true
 
-##  MCU - In Y Position
-##  A Stepper - Right
 [stepper_y]
-step_pin: P0.19
-## TMC2209
-#dir_pin: P0.20
-## TMC5160
-dir_pin: !P0.20
-enable_pin: !P2.8
-##  160 steps per mm -> 0.00625 mm per step 
-##  0.9 Stepper Motor
-full_steps_per_rotation: 400
-microsteps: 32
+enable_pin: !PF15
+step_pin: PG0
+dir_pin: PG1
 rotation_distance: 40
-endstop_pin: ^!P1.28
+microsteps: 16
+full_steps_per_rotation:200  #set to 400 for 0.9 degree stepper
+endstop_pin: ^PG9
 position_min: 0
-position_endstop: 355
-position_max: 355
-homing_speed: 100
-homing_retract_dist: 2
-second_homing_speed: 5
+position_endstop: 305
+position_max: 305
+homing_speed: 90
+homing_retract_dist: 3
 homing_positive_dir: true
- 
-##  Z MCU - In X Position
-##  Z0 Stepper - Front Left
+
 [stepper_z]
-step_pin: z:P2.2
-## TMC2209
-#dir_pin: !z:P2.6
-## TMC5160
-dir_pin: z:P2.6
-enable_pin: !z:P2.1
-##  800 steps per mm -> 0.00125 mm per step 
-##  0.9 Stepper Motor
-full_steps_per_rotation: 400
-microsteps: 32
-gear_ratio: 80:16
+enable_pin: !PE0
+step_pin: PE6
+dir_pin: !PA14
 rotation_distance: 40
-endstop_pin: z:P1.27
-##  Z-position of nozzle (in mm) to z-endstop trigger point relative to print surface (Z0)
-##  (+) value = endstop above Z0, (-) value = endstop below
-##	Increasing position_endstop brings nozzle closer to the bed
-##  After you run Z_ENDSTOP_CALIBRATE, position_endstop will be stored at the very end of your config
-#position_endstop: -0.5
-position_max: 320
-position_min: -1
-homing_speed: 15.0
-second_homing_speed: 3.0
-homing_retract_dist: 2.0
+gear_ratio: 80:16
+microsteps: 64
+# endstop_pin: ^PA0
+endstop_pin: ^PG10
+#position_endstop = 0.85 #1.23
+# endstop_pin: probe: z_virtual_endstop
+position_max: 290
+position_min: -25
+homing_speed: 15
+second_homing_speed: 5
+homing_retract_dist: 2.5
 
-##  Z MCU - In Y Position
-##  Z1 Stepper - Rear Left
+##	MCU - In Y Position (Z1 Stepper - Rear Left)
 [stepper_z1]
-step_pin: z:P0.19
-## TMC2209
-#dir_pin: z:P0.20
-## TMC5160
-dir_pin: !z:P0.20
-enable_pin: !z:P2.8
-##  800 steps per mm -> 0.00125 mm per step 
-##  0.9 Stepper Motor
-full_steps_per_rotation: 400
-microsteps: 32
-gear_ratio: 80:16
+enable_pin: !PD4
+step_pin: PE2
+dir_pin: PE3
 rotation_distance: 40
+gear_ratio: 80:16
+microsteps: 64
 
-##  Z MCU - In Z Position
-##  Z2 Stepper - Rear Right
+##	Z MCU - In Z Position (Z2 Stepper - Rear Right)
 [stepper_z2]
-step_pin: z:P0.22
-## TMC2209
-#dir_pin: !z:P2.11
-## TMC5160
-dir_pin: z:P2.11
-enable_pin: !z:P0.21
-##  800 steps per mm -> 0.00125 mm per step 
-##  0.9 Stepper Motor
-full_steps_per_rotation: 400
-microsteps: 32
-gear_ratio: 80:16
+enable_pin: !PF1
+step_pin: PC13
+dir_pin: !PF0
 rotation_distance: 40
+gear_ratio: 80:16
+microsteps: 64
 
-##  Z MCU - In E0 Position
-##  Z3 Stepper - Front Right
+##	Z MCU - In E0 Position (Z3 Stepper - Front Right)
 [stepper_z3]
-step_pin: z:P2.13
-## TMC2209
-#dir_pin: z:P0.11
-## TMC5160
-dir_pin: !z:P0.11
-enable_pin: !z:P2.12
-##  800 steps per mm -> 0.00125 mm per step 
-##  0.9 Stepper Motor
-full_steps_per_rotation: 400
-microsteps: 32
-gear_ratio: 80:16
+enable_pin: !PG2
+step_pin: PF9
+dir_pin: PF10
 rotation_distance: 40
+gear_ratio: 80:16
+microsteps: 64
