--- a/tmc.cfg
+++ b/tmc.cfg
@@ -1,167 +1,116 @@
 #####################################################################
 #  TMC Definitions of all steppers
 #####################################################################
-[tmc5160 stepper_x]
-cs_pin: P1.10
-spi_software_miso_pin: P0.5
-spi_software_mosi_pin: P1.17
-spi_software_sclk_pin: P0.4
-interpolate: true
-run_current: 0.875
-hold_current: 0.7
-sense_resistor: 0.075
-stealthchop_threshold: 0
 
-[tmc5160 stepper_y]
-cs_pin: P1.9
-spi_software_miso_pin: P0.5
-spi_software_mosi_pin: P1.17
-spi_software_sclk_pin: P0.4
-interpolate: true
-run_current: 0.875
-hold_current: 0.7
-sense_resistor: 0.075
-stealthchop_threshold: 0
-
-[tmc5160 stepper_z]
-cs_pin: z:P1.10
-spi_software_miso_pin: z:P0.5
-spi_software_mosi_pin: z:P1.17
-spi_software_sclk_pin: z:P0.4
-interpolate: true
-run_current: 1.1
-sense_resistor: 0.075
-stealthchop_threshold: 0
-
-[tmc5160 stepper_z1]
-cs_pin: z:P1.9
-spi_software_miso_pin: z:P0.5
-spi_software_mosi_pin: z:P1.17
-spi_software_sclk_pin: z:P0.4
-interpolate: true
-run_current: 1.1
-sense_resistor: 0.075
-stealthchop_threshold: 0
-
-[tmc5160 stepper_z2]
-cs_pin: z:P1.8
-spi_software_miso_pin: z:P0.5
-spi_software_mosi_pin: z:P1.17
-spi_software_sclk_pin: z:P0.4
-interpolate: true
-run_current: 1.1
-sense_resistor: 0.075
-stealthchop_threshold: 0
-
-[tmc5160 stepper_z3]
-cs_pin: z:P1.4
-spi_software_miso_pin: z:P0.5
-spi_software_mosi_pin: z:P1.17
-spi_software_sclk_pin: z:P0.4
-interpolate: true
-run_current: 1.1
-sense_resistor: 0.075
-stealthchop_threshold: 0
-
-#[tmc2209 stepper_x]
-#uart_pin: P1.10
-#interpolate: true
-#run_current: 0.875
-#hold_current: 0.7
-#sense_resistor: 0.110
-#stealthchop_threshold: 1
-#driver_TBL: 2
-#driver_TOFF: 3
-#driver_HEND: 3
-#driver_HSTRT: 0
-#driver_PWM_GRAD: 8
-#driver_PWM_LIM: 9
-
-#[tmc2209 stepper_y]
-#uart_pin: P1.9
-#interpolate: true
-#run_current: 0.875
-#hold_current: 0.7
-#sense_resistor: 0.110
-#stealthchop_threshold: 1
-#driver_TBL: 2
-#driver_TOFF: 3
-#driver_HEND: 3
-#driver_HSTRT: 0
-#driver_PWM_GRAD: 8
-#driver_PWM_LIM: 9
-
-#[tmc2209 stepper_z]
-#uart_pin: z:P1.10
-#interpolate: true
-#run_current: 1.1
-#hold_current: 1.1
-#sense_resistor: 0.110
-#stealthchop_threshold: 1
-#driver_TBL: 0
-#driver_TOFF: 7
-#driver_HEND: 2
-#driver_HSTRT: 0
-#driver_PWM_GRAD: 8
-#driver_PWM_LIM: 10
-
-#[tmc2209 stepper_z1]
-#uart_pin: z:P1.9
-#interpolate: true
-#run_current: 1.1
-#hold_current: 1.1
-#sense_resistor: 0.110
-#stealthchop_threshold: 1
-#driver_TBL: 0
-#driver_TOFF: 7
-#driver_HEND: 3
-#driver_HSTRT: 0
-#driver_PWM_GRAD: 8
-#driver_PWM_LIM: 10
-
-#[tmc2209 stepper_z2]
-#uart_pin: z:P1.8
-#interpolate: False
-#interpolate: true
-#run_current: 1.1
-#hold_current: 1.1
-#sense_resistor: 0.110
-#stealthchop_threshold: 1
-#driver_TBL: 0
-#driver_TOFF: 7
-#driver_HEND: 2
-#driver_HSTRT: 0
-#driver_PWM_GRAD: 8
-#driver_PWM_LIM: 10
-
-#[tmc2209 stepper_z3]
-#uart_pin: z:P1.4
-#interpolate: true
-#run_current: 1.1
-#hold_current: 1.1
-#sense_resistor: 0.110
-#stealthchop_threshold: 1
-#driver_TBL: 0
-#driver_TOFF: 7
-#driver_HEND: 2
-#driver_HSTRT: 0
-#driver_PWM_GRAD: 8
-#driver_PWM_LIM: 10
-
-
-[tmc2209 extruder]
-############### Different Clockworks Setups ###############
-##  Afterburner: Stepper Motor 0.9 step distance 0.00120 calibrated 0.001196
-##  run_current: 0.6
-##  hold_current: 0.6
-############################################################
-##  Galileo: Stepper Motor 1.8 step distance 0.00132 calibrated 0,001320975
-##  run_current: 0.25
-##  hold_current: 0.20
-############### Different Clockworks Setups ###############
-uart_pin: P1.4
+[tmc2209 stepper_x]
+uart_pin: PC4
 interpolate: false
-run_current: 0.25
-hold_current: 0.1
+run_current: 0.85
+hold_current: 0.85
+sense_resistor: 0.110
+stealthchop_threshold: 0#5.5
+
+[tmc2209 stepper_y]
+uart_pin: PD11
+interpolate: false
+run_current: 0.85
+hold_current: 0.85
+sense_resistor: 0.110
+stealthchop_threshold: 0#5.5
+
+[tmc2209 stepper_z]
+uart_pin: PD3
+interpolate: false
+run_current: 0.85
+hold_current: 0.85
+sense_resistor: 0.110
+stealthchop_threshold: 0#5.5
+# driver_IHOLDDELAY: 0
+# driver_TPOWERDOWN: 50
+# driver_TBL: 2
+# driver_TOFF: 5
+# driver_HEND: 5
+# driver_HSTRT: 0
+# driver_PWM_AUTOGRAD: True
+# driver_PWM_AUTOSCALE: True
+#driver_PWM_LIM: 12
+#driver_PWM_REG: 8
+#driver_PWM_FREQ: 1
+#driver_PWM_GRAD: 14
+#driver_PWM_OFS: 36
+#driver_SGTHRS: 0
+
+[tmc2209 stepper_z1]
+uart_pin: PE1
+interpolate: false
+run_current: 0.85
+hold_current: 0.85
+sense_resistor: 0.110
+stealthchop_threshold: 0#5.5
+driver_IHOLDDELAY: 0
+driver_TPOWERDOWN: 50
+# driver_TBL: 2
+# driver_TOFF: 5
+# driver_HEND: 5
+# driver_HSTRT: 0
+# driver_PWM_AUTOGRAD: True
+# driver_PWM_AUTOSCALE: True
+#driver_PWM_LIM: 12
+#driver_PWM_REG: 8
+#driver_PWM_FREQ: 1
+#driver_PWM_GRAD: 14
+#driver_PWM_OFS: 36
+#driver_SGTHRS: 0
+
+[tmc2209 stepper_z2]
+uart_pin: PE4
+interpolate: false
+run_current: 0.85
+hold_current: 0.85
+sense_resistor: 0.110
+stealthchop_threshold: 0#5.5
+# driver_IHOLDDELAY: 0
+# driver_TPOWERDOWN: 50
+# driver_TBL: 2
+# driver_TOFF: 5
+# driver_HEND: 5
+# driver_HSTRT: 0
+# driver_PWM_AUTOGRAD: True
+# driver_PWM_AUTOSCALE: True
+#driver_PWM_LIM: 12
+#driver_PWM_REG: 8
+#driver_PWM_FREQ: 1
+#driver_PWM_GRAD: 14
+#driver_PWM_OFS: 36
+#driver_SGTHRS: 0
+
+[tmc2209 stepper_z3]
+uart_pin: PF2
+interpolate: false
+run_current: 0.85
+hold_current: 0.85
+sense_resistor: 0.110
+stealthchop_threshold: 0#5.5
+# driver_IHOLDDELAY: 0
+# driver_TPOWERDOWN: 50
+# driver_TBL: 2
+# driver_TOFF: 5
+# driver_HEND: 5
+# driver_HSTRT: 0
+# driver_PWM_AUTOGRAD: True
+# driver_PWM_AUTOSCALE: True
+#driver_PWM_LIM: 12
+#driver_PWM_REG: 8
+#driver_PWM_FREQ: 1
+#driver_PWM_GRAD: 14
+#driver_PWM_OFS: 36
+#driver_SGTHRS: 0
+
+
+[tmc2208 extruder]
+uart_pin: PC6
+interpolate: true
+run_current: 0.32
+hold_current: 0.32
 sense_resistor: 0.110
 stealthchop_threshold: 0
